initial for cosi round6

--- a/i18n/audit_events_pt.properties
+++ b/i18n/audit_events_pt.properties
@@ -133,7 +133,7 @@ __study_user_role_removed_from_study = STUDY_USER_ROLE removido do estudo
 __study_user_role_restored_to_study = STUDY_USER_ROLE restaurado ao estudo
 __study_user_role_updated_in_the_database = STUDY_USER_ROLE atualizado no banco
 __study_user_role_created_in_the_database = STUDY_USER_ROLE criado no banco
-__subject = Paciente
+__subject = Caso
 __subject_created_tin_the_database = Paciente criado no banco
 __subject_event_status_ID = Subject Event Status ID
 __subject_global_ID = ID global do Paciente
@@ -176,7 +176,7 @@ __job_fired_fail = The Job failed to complete successfully.
 
 __location = Localiza\u00e7\u00e3o
 __start_date = Start Date
-__status = Status
+__status = Estado
 
 __enrollment_date = Enrollment Date
 __study_id = Study id
@@ -199,7 +199,7 @@ __private = private
 __removed = removido
 __auto-removed = auto-removed
 __locked = locked
-__signed = signed
+__signed = assinado
 __frozen = frozen
 __true = TRUE
 __false = FALSE
