--- a/i18n/format_et.properties
+++ b/i18n/format_et.properties
@@ -64,7 +64,7 @@ date_format_year_month = MMM-yyyy
 
 
 
-date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{1,2}
+date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3,5}[\\-\\.][0-9]{1,2}
 
 
 
@@ -73,7 +73,7 @@ date_regexp = [0-9]{4}[\\-\\.][A-Za-z]{3}[\\-\\.][0-9]{1,2}
 
 
 
-date_time_format = DD-MMM-YYYY HH:MM
+date_time_format = tt
 
 
 
@@ -85,7 +85,7 @@ date_time_format = DD-MMM-YYYY HH:MM
 
 
 
-date_time_format_string = dd-MMM-yyyy HH:mm:ss
+date_time_format_string = ttt
 
 
 
@@ -114,7 +114,7 @@ image_dir = en
 
 
 
-jscalendar_language_file = calendar-en.js
+jscalendar_language_file = calendar-et.js
 
 
 mid_date_format = MM/dd
