--- a/i18n/notes_nl.properties
+++ b/i18n/notes_nl.properties
@@ -49,7 +49,7 @@ associated_study_subjects = Associated Study Subjects
 
 attention_must_complete_and_submit = OPGELET: u moet het CRF opslaan om deze Discrepantie te bewaren. Wanneer u dit niet doet wordt uw Discrepantie niet opgeslagen.
 
-based_ID_subject_exist_confirm = Based on the Person ID you entered, this subject already exists in the system. Please confirm the information shown below before proceeding. If any of this information is incorrect, please contact your study coordinator or OpenClinica administrator.
+based_ID_subject_exist_confirm = Based on the Person ID you entered, this subject already exists in the system. Please confirm the information shown below before proceeding. If any of this information is incorrect, please contact your study coordinator or LibreClinica administrator.
 
 browse_by_SED = Browse by Study Event Definition
 
@@ -83,7 +83,7 @@ choose_browser = OpenClinica is getest met Internet Explorer7 en FireFox 3.5. en
 Gebruikt u alstublieft een van deze browsers om te garanderen dat het programma naar behoren werkt. \
 Neem zonodig contact op met uw IT-afdeling.
 
-choosing_switch_to_study = U kiest ervoor verder te gaan met studie
+choosing_switch_to_study = U kiest ervoor verder te gaan met
 
 clear_search_keywords = Zoekwoorden wissen
 
@@ -130,7 +130,7 @@ congratulations_spreadsheet = <b>Gefeliciteerd!</b> Uw XL-bestand bevatte geen f
 
 contact_openclinica_administrator = Neem contact op met de OpenClinica-administrator.
 
-copy_dataset_by_change_name = If you change the dataset name, OpenClinica will create a copy of the dataset and the existing dataset will not be changed. If you do not change the name, the dataset will be updated.
+copy_dataset_by_change_name = If you change the dataset name, LibreClinica will create a copy of the dataset and the existing dataset will not be changed. If you do not change the name, the dataset will be updated.
 
 create_CRF_entering_name = Create a new CRF by entering a name and description.
 
@@ -148,7 +148,7 @@ crfchange_study_contact_sysadmin = No puede introducir datos en la Hoja CRD de e
 
 crfno_have_correct_privilege_current_study = U heeft geen bevoegdheid data in te voeren
 
-current_study_changed_succesfully = Is Studie/Centrum is veranderd.
+current_study_changed_succesfully = Welkom.
 
 currently_in = (momenteel in)
 
@@ -187,7 +187,7 @@ design_implement_sdv = Het algemene scherm geeft u de mogelijkheid Bron Data Ver
 
 design_implement_sdv_study_subject = Dit scherm is voor Bron Data Verificatie. De tabel bevat alle Deelnemers in de Studie, of ze nu wel of niet beschikbaar zijn voor Bron Data Verificatie.
 
-developer_network = <h2>Developer Network</h2><P><b>Developer Services and Code:</b> Through our Knowledge Base, Akaza will share code and extended documentation on the OpenClinica system, and can provide support on technical topics through our forums or on a one-on-one basis.<P><b>Developer Conference Calls:</b>  Akaza offers regular conference calls where we demonstrate the application, all the while answering developers' questions and comments.  These calls are done in a small setting of about eight to ten developers and at least two Akaza staff members present, and are offered monthly.
+developer_network = <h2>Developer Network</h2><P><b>Developer Services and Code:</b> Through our Knowledge Base, Akaza will share code and extended documentation on the LibreClinica system, and can provide support on technical topics through our forums or on a one-on-one basis.<P><b>Developer Conference Calls:</b>  Akaza offers regular conference calls where we demonstrate the application, all the while answering developers' questions and comments.  These calls are done in a small setting of about eight to ten developers and at least two Akaza staff members present, and are offered monthly.
 
 director_coordinator_privileges_manage = If you have principal investigator or study coordinator privilege, you may manage your current study and sites (if any), as well as all the users, subjects and event definitions in the study and sites.
 
@@ -251,7 +251,7 @@ fill_out_form_to_contact = Vult u a.u.b de volgende velden in om contact op te n
 
 fill_out_form_to_request_study = De onderstaande informatie zal naar uw OpenClinica Administrator worden gestuurd. De Administrator zal beslissen of u toegang tot een studie of centrum kan krijgen. Neem bij vragen contact op met de OpenClinica Administrator.
 
-fill_to_add_click_help = Fill out the form to add a subject to the study. Click on the help icon for assistance.
+fill_to_add_click_help = Fill out the form to add a subject to the study. Click on the Documentation link for assistance.
 
 filter_data_selecting_range = Filter your data by subject enrollment date by selecting a date range below.
 
@@ -310,14 +310,14 @@ if_you_restore_this_CRF = If you restore this CRF, all the assigned uses of the 
 if_you_restore_this_CRF_version = If you Restore this CRF Version, all the assigned uses of the CRF Version and any data entered using it will be Restored as well. Are you sure you want to restore it?
 
 
-import_instructions = Upload an XML file that contains CRF data.  If your CRF has calculated value fields, you will have to go in and save each section.  OpenClinica only calculates values on a manual save.
+import_instructions = Upload an XML file that contains CRF data.  If your CRF has calculated value fields, you will have to go in and save each section.  LibreClinica only calculates values on a manual save.
 
 
 import_rule_instructions = Upload an XML file that contains Rule data.
 
-import_rule_side_bar_instructions = Batch upload Rule data to OpenClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
+import_rule_side_bar_instructions = Batch upload Rule data to LibreClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
 
-import_side_bar_instructions = Batch upload CRF data to OpenClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
+import_side_bar_instructions = Batch upload CRF data to LibreClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
 
 in_order_to_enter_data_create_e = In order to enter data create event
 
@@ -339,7 +339,7 @@ interviewer_name_default_as_blank = Interviewer Name Default as Blank?
 
 interviewer_name_editable = Interviewer Name Editable?
 
-items_names_are_shared_across_different_versions = <p>Item Names are <b>shared</b> across different versions of a CRF in OpenClinica system. The CRF version upload process automatically detects Item Names that are new to this CRF and haven't been included in previous versions of this CRF.</p> <p>If any new Item Names were detected in the spreadsheet, they are listed below. If an exsiting item's properties will be changed, it is listed below  as well. Names in the list below will be added or changed in the database if you decide to continue.</p> <p>If there are no new Item Names or changes, which means all the Items Names in this CRF Version already exist for this CRF, the list below will be empty. <br><br><b>If you have made a mistake, <a href="ListCRF">please go back to the CRF List</a> and upload your spreadsheet again.</b></p>
+items_names_are_shared_across_different_versions = <p>Item Names are <b>shared</b> across different versions of a CRF in LibreClinica system. The CRF version upload process automatically detects Item Names that are new to this CRF and haven't been included in previous versions of this CRF.</p> <p>If any new Item Names were detected in the spreadsheet, they are listed below. If an exsiting item's properties will be changed, it is listed below  as well. Names in the list below will be added or changed in the database if you decide to continue.</p> <p>If there are no new Item Names or changes, which means all the Items Names in this CRF Version already exist for this CRF, the list below will be empty. <br><br><b>If you have made a mistake, <a href="ListCRF">please go back to the CRF List</a> and upload your spreadsheet again.</b></p>
 
 leave_this_field_blank_if_not_applicable = Laat dit veld open, wanneer eind datum/tijd niet van toepassing zijn.
 
@@ -379,7 +379,7 @@ manage_all_subjects_in = Manage All Subjects in
 
 manage_all_users_in = Alle gebruikers beheren in
 
-manage_execute_rule_assignments = This page allows you to view and manage your study rules. OpenClinica rules provide edit check, email action and other capabilities during the course of data capture and in batch mode.<br><br> You may click on the action icons to view, test, execute and manage these rules. By default the table is filtered by Rule Status (Available) and sorted by Item Name. Use the column headers and filter fields (gray boxes) to sort and filter, or filter by Event CRF by using the tree in the 'Info' panel below
+manage_execute_rule_assignments = This page allows you to view and manage your study rules. LibreClinica rules provide edit check, email action and other capabilities during the course of data capture and in batch mode.<br><br> You may click on the action icons to view, test, execute and manage these rules. By default the table is filtered by Rule Status (Available) and sorted by Item Name. Use the column headers and filter fields (gray boxes) to sort and filter, or filter by Event CRF by using the tree in the 'Info' panel below
 
 marking_CRF_complete_finalize_DE = Wanneer u dit CRF markeert als Afgerond is de invoer fase beëindigd. U moet een Reden wijziging geven wanneer u later iets verandert. Weet u zeker dat u dit CRF als Afgerond wilt markeren?
 
@@ -389,7 +389,7 @@ may_change_request_access = Indien nodig kunt u een andere studie of een ander c
 
 modify_role_for = Wijzig de Rol van <b>{0}</b> binnen <b>{1}</b>
 
-my_openclinica = My OpenClinica
+my_openclinica = My LibreClinica
 
 name_description_required = De velden naam en omschrijving zijn verplicht.
 
@@ -581,13 +581,13 @@ study_can_have_many_event_with_more_CRF = De huidige studie kan meerdere Bezoek-
 
 study_choosed_removed_restore_first = The study/site you chose has been removed. Please restore it first if you have correct privilege or contact your System Administrator.
 
-study_frozen_locked_note = The Study or Site you are logged into is in the status of either Frozen or Locked. This means you will not be able to add any subjects, schedule any events, or enter any data. If the study is Locked, you will not be able to add or respond to any discrepancy notes. Please contact your OpenClinica Administrator if you have any questions about the status of this study or site.
+study_frozen_locked_note = The Study or Site you are logged into is in the status of either Frozen or Locked. This means you will not be able to add any subjects, schedule any events, or enter any data. If the study is Locked, you will not be able to add or respond to any discrepancy notes. Please contact your LibreClinica Administrator if you have any questions about the status of this study or site.
 
 study_have_sites_data_collected = The current study can have several sites where subject data is collected. Each site uses the same study protocol, while managing its own subjects and users.
 
 study_management_by_directors_coordinators = Study management, configuration, and reporting
 
-study_module_instruction = Please see the instructions to the right on the main page.
+study_module_instruction = Instructies staan rechts op het scherm.
 
 subject_record_for = Subject Record for\u0009
 
@@ -659,7 +659,7 @@ upon_login_based_on_user_role = (upon login based on user role in study)
 
 use_task_pane_to_select_CRF = Gebruik de Taken-kolom links in uw scherm om CRF's te kiezen.
 
-use_the_following_link_to_log = Use the following link to log into OpenClinica
+use_the_following_link_to_log = Use the following link to log into LibreClinica
 
 user_support_network = <h2>User Support network</h2><P><b>OpenClinica Knowledge Base:</b> Access to an on-line portal of help resources, forums and training materials developed by Akaza developers and staff. <P><b>Trouble Ticket System:</b> Unlimited online support for all technical/administrative issues that may arise with installation or administration of the system.<P><b>CRF Exchange:</b> In addition to providing support for proper setup of Clinical Research Forms, Akaza will offer a library of already-generated forms to download and use.  If your CRF needs are specific, Akaza will work with you and utilize its own contacts in the clinical research field to aid in study setup.
 
@@ -703,7 +703,7 @@ you_choose_to_restore_the_following_CRF = You choose to restore the following CR
 
 
 
-your_account_has_been_restored_and_password_reset = Your account on the OpenClinica system has been restored, and your password has been reset.  Your login information follows
+your_account_has_been_restored_and_password_reset = Your account on the LibreClinica system has been restored, and your password has been reset.  Your login information follows
 
 
 
@@ -718,17 +718,17 @@ you_choose_to_restore_the_following_version = You choose to restore the followin
 
 you_will_be_required_to_change = You may be required to change this password the next
 
-your_account_has_been_unlocked_and_password_reset = Your account on the OpenClinica system has been unlocked, and your password has been reset.  Your login information follows
+your_account_has_been_unlocked_and_password_reset = Your account on the LibreClinica system has been unlocked, and your password has been reset.  Your login information follows
 
 your_current_active_study_is = U werkt nu met:
 
-your_new_openclinica_account = Your New OpenClinica Account
+your_new_openclinica_account = Your New LibreClinica Account
 
-your_new_openclinica_account_has_been_restored = Your OpenClinica account has been restored
+your_new_openclinica_account_has_been_restored = Your LibreClinica account has been restored
 
-your_openclinica_account_password_reset = Your OpenClinica account password has been reset
+your_openclinica_account_password_reset = Your LibreClinica account password has been reset
 
-your_openclinica_password = your OpenClinica password
+your_openclinica_password = your LibreClinica password
 
 
 the_study_site_status_is = Deze Studie/dit Centrum is
@@ -745,7 +745,7 @@ html_helptext = Extracting to an HTML file for printing to hard copy
 pdf_output = Extract naar PDF
 pdf_output_link = Klik hier voor PDF
 pdf_helptext = Extracting to a PDF file for printing to hard copy
-extract_instructions = You have just run an Extract Data job on the system.  You can feel free to work on other things while the job runs, and OpenClinica will alert you when the job is finished.
+extract_instructions = You have just run an Extract Data job on the system.  You can feel free to work on other things while the job runs, and LibreClinica will alert you when the job is finished.
 extract_is_running = Your extract is running. You will receive an email and message when the extract is complete.
 back_to_datasets = Alle Datasets
 back_to_dataset = Terug naar de Dataset
