--- a/i18n/page_messages_pt.properties
+++ b/i18n/page_messages_pt.properties
@@ -64,11 +64,11 @@ VALIDATION_ERROR_MESSAGE_column = VALIDATION ERROR MESSAGE column
 VALIDATION_column = VALIDATION column
 
 X_was_created_succesfully = ' foi criado com sucesso.
-
+a_user_cannot_be_created_no_roles_as_role = N\u00e3o foi poss\u00edvel criar o usu\u00e1rio, pois n\u00e3o existe pap\u00e9is para um papel quando for ativado o estudo para o usu\u00e1rio.
 
 
 a_user_cannot_be_created_no_study_as_active = N\u00e3o foi poss\u00edvel criar o usu\u00e1rio, pois n\u00e3o h\u00e1 estudo para definir o usu\u00e1rio como parte de um estudo.
-a_user_cannot_be_created_no_roles_as_role = N\u00e3o foi poss\u00edvel criar o usu\u00e1rio, pois n\u00e3o existe pap\u00e9is para um papel quando for ativado o estudo para o usu\u00e1rio.
+
 a_user_cannot_be_created_no_user_types_for = N\u00e3o foi poss\u00edvel criar o usu\u00e1rio, pois n\u00e3o h\u00e1 usu\u00e1rio desse tipo nesse estudo ativo.
 
 access_end = '>here</a>.<br/>
@@ -157,13 +157,13 @@ dataset_has_been_succesfully_reinstated = O conjunto de dados foi restabelecido 
 dataset_removed = O conjunto de dados foi removido com sucesso.
 
 default_value_not_allowed_for_calculation = Default_value is not allowed for 'calculation' or 'group-calculation' type in DEFAULT_VALUE column at
-
+did_not_match_crf_version = did not match the intended CRF version you want to upload.  Make sure this reads
 
 
 does_not_exist_in_group_spreadsheet = does not exist in the Groups tab. Add it to the Groups tab, or change it to a Group that exists.
 
 duplicate = A duplicate
-did_not_match_crf_version = did not match the intended CRF version you want to upload.  Make sure this reads
+
 email_body_1 = Study:
 
 email_body_10 = with your user name and password after selecting the link. If you receive a page cannot be displayed message, please make sure to select the Change Study/Site link in the upper right table of the page, select the study referenced above, and select the link again.
@@ -196,7 +196,7 @@ email_header_3 = because you were listed as a person to contact. Please review t
 
 error_message_for_width_decimal_at = Error message for WIDTH_DECIMAL column at
 
-errors_in_submission_see_below = There are issue(s) with your submission. The data has NOT been saved. See below for details.
+errors_in_submission_see_below = H\u00E1 problema (s) com o seu envio. Os dados N\u00C3O foram salvos. Veja abaixo para detalhes.
 
 errors_in_submission_see_below_details = There were some errors in your submission. See below for details.
 
@@ -218,11 +218,11 @@ expected_total_enrollment_must_be_a_positive_number = Cadastros totais esperados
 expression_invalid_at = The expression is invalid at
 
 expression_not_start_with_func_at = The expression does not start with 'func' at
-
+fields_for_event_all_required = Os campos para o evento s\u00e3o todos requeridos. Favor escolher 'Adicionar novo evento de estudo' do menu e tentar adicionar os eventos de novo.
 
 
 file_uploading_failed_please_check_logs_and_upload_again = File uploading failed. Check the logs and upload again.
-fields_for_event_all_required = Os campos para o evento s\u00e3o todos requeridos. Favor escolher 'Adicionar novo evento de estudo' do menu e tentar adicionar os eventos de novo.
+
 permitted_file_extensions = Permitted file extension(s) "{0}".
 
 prohibited_file_extensions = Prohibited file extension(s) "{0}".
@@ -480,7 +480,7 @@ not_valid_section_at_row = is not a valid section at row
 
 note_cannot_be_saved = Your Discrepancy Note for the Item cannot be saved because data entry for this CRF is not started yet.
 
-note_saved_into_db = Your Discrepancy Note has been saved into database.
+note_saved_into_db = A sua Nota de Discrepância foi guardada na base de dados.
 
 number_option_not_match = NUMBER OF OPTIONS DOES NOT MATCH
 
@@ -584,7 +584,7 @@ please_choose_a_user_to_set_role_for = Favor escolher um usu\u00e1rio para coloc
 please_choose_a_user_to_view = Favor escolher um usu\u00e1rio para ver.
 
 please_choose_an_ED_ta_to_vies_details = Favor escolher uma defini\u00e7\u00e3o de evento para ver detalhes.
-please_select_the_link_below_dn = Please select the link below to view the information provided. You may need to login to OpenClinica with your user name and password after selecting the link. If you receive a page cannot be displayed message, please make sure to select the Change Study/Site link in the upper right table of the page, select the study referenced above, and select the link again.
+
 please_choose_an_event_CRF_to_delete = Favor escolher um CRF de evento para deletar.
 
 please_choose_an_event_CRF_to_remove = Favor escolher um CRF de evento para remover.
@@ -681,9 +681,9 @@ should_select_one_item_to_create_dataset = Voc\u00ea deve selecionar pelo menos 
 since_perform_data_entry = Visto que voc\u00ea executou a rodade inicial de entrada de dados neste CRF de evento, e que menos de 12 horas se passaram desde que a entrada de dados foi finalizada, voc\u00ea n\u00e3o pode executar valida\u00e7\u00e3o agora.
 
 sorry_but_at_this_time_may_not_modufy_SED = Desculpe, mas agora voc\u00ea n\u00e3o pode modificar uma defini\u00e7\u00e3o de estudo de evento uma vez que dados foram adicionados a ele. Se voc\u00ea precisa editar, favor remover todos os dados de evento associados a esta defini\u00e7\u00e3o de estudo de evento primeiro.
-study_module_description_2 = Once you have completed steps 1 - 5 and click the "Save" button, steps 6 and 7 will appear, allowing you to configure your study's Sites and add Users at the study or site levels.
-study_creation_cancelled = Your Study creation is cancelled.
 
+study_creation_cancelled = Your Study creation is cancelled.
+study_module_description_2 = Once you have completed steps 1 - 5 and click the "Save" button, steps 6 and 7 will appear, allowing you to configure your study's Sites and add Users at the study or site levels.
 study_event_to_enter_data_not_belong_study = O evento de estudo para o qual voc\u00ea est\u00e1 tentando entrar dados n\u00e3o pertence ao estudo corrente.
 
 study_event_updated = O evento de estudo foi atualizado com sucesso.
@@ -692,7 +692,7 @@ study_locked_site_status_frozen = The parent Study is frozen; you cannot update 
 
 study_locked_site_status_locked = The parent Study is locked; you cannot update the status of the Site.
 
-study_module_description_1 = Welcome to the Build Study page of OpenClinica! This page is designed to help you build and configure your Study by following a task-based approach. The tasks listed below need to be completed in order to start using your Study. Once you have finished each task, check "Mark Complete" then click the "Save" button. <ul><li>To start a task, select the {0} icon. You can always select the {1} icon to add a new component to your Study.</li><li>Select the {2} icon to edit the values for a task.</li><li>Select the {3} to view the specified values for that task.</li></ul>
+study_module_description_1 = Welcome to the Build Study page of LibreClinica! This page is designed to help you build and configure your Study by following a task-based approach. The tasks listed below need to be completed in order to start using your Study. Once you have finished each task, check "Mark Complete" then click the "Save" button. <ul><li>To start a task, select the {0} icon. You can always select the {1} icon to add a new component to your Study.</li><li>Select the {2} icon to edit the values for a task.</li><li>Select the {3} to view the specified values for that task.</li></ul>
 
 
 
@@ -1022,6 +1022,7 @@ lockout_changes_have_been_saved = The changes you made to the Lockout Configurat
 job_ran_for = Job ran for
 job_ran_but_no_files = Job ran but no real files found.
 job_failure_for = Job FAILURE for
+please_select_the_link_below_dn = Please select the link below to view the information provided. You may need to login to OpenClinica with your user name and password after selecting the link. If you receive a page cannot be displayed message, please make sure to select the Change Study/Site link in the upper right table of the page, select the study referenced above, and select the link again.
 please_review_the_data_html = Review the data, or modify the files accordingly so that they can be imported.<br/>
 unreadable_file = Unreadable File
 problems_encountered_with_file = Problems encountered with file {0}: {1}<br/>
@@ -1035,7 +1036,6 @@ you_can_access_odm_12_xml = You can access your ODM 1.2 XML file <a href='Access
 you_can_access_odm_13 = You can access your ODM 1.3 XML file <a href='AccessFile?fileId={0}'>here</a>.<br/>
 you_can_access_odm_13_xml = You can access your ODM 1.3 w/OpenClinica Extension XML file <a href='AccessFile?fileId={0}'>here</a>.<br/>
 you_can_access_spss = You can access your SPSS files <a href='AccessFile?fileId={0}'>here</a>.<br/>
-
 SHOW_GROUP_column = SHOW_GROUP column
 SHOW_ITEM_column = SHOW_ITEM column
 write_protected = The file you are trying to remove is write protected. Contact the administrator.
@@ -1060,7 +1060,7 @@ item_header_length_error = Item header cannot be more than 2000 characters
 item_subheader_length_error = Item subheader cannot be more than 240 characters
 regexp_errror_length_error = Regexp error cannot be more than 255 characters
 group_label_length_error = Group Label cannot be more than 255 characters
-radio_with_default = OpenClinica does not support DEFAULT_VALUES with radio RESPONSE_TYPES. Change the RESPONSE_TYPE for this item
+radio_with_default = LibreClinica does not support DEFAULT_VALUES with radio RESPONSE_TYPES. Change the RESPONSE_TYPE for this item
 change_radio = , or remove the value in the DEFAULT_VALUE column.
 repeating_group_error = Repeating Group must be true/false.
 repeat_number_none_repeating = Repeat Number must be blank for non-repeating groups.
@@ -1074,13 +1074,13 @@ should_be_hide_for_scd = For a simple conditional display item, its ITEM_DISPLAY
 ITEM_DISPLAY_STATUS_column = ITEM_DISPLAY_STATUS column
 
 
-rules_Import_info = Rules are created in an XML document outside of OpenClinica and are imported through this module. <br> Rules allow users to build advanced edit checks, such as cross-field and cross-form edit checks and edit checks with dates. <br>When authoring Rules, actions can be specified for sending emails, or autogenerating Discrepancy Notes or both. <br>For more information about Rules and examples, see 'Rules' in OpenClinica User Documentation.
+rules_Import_info = Rules are created in an XML document outside of LibreClinica and are imported through this module. <br> Rules allow users to build advanced edit checks, such as cross-field and cross-form edit checks and edit checks with dates. <br>When authoring Rules, actions can be specified for sending emails, or autogenerating Discrepancy Notes or both. <br>For more information about Rules and examples, see 'Rules' in LibreClinica User Documentation.
 
 
 you_can_only_use_letters_or_numbers = \u0020You can only use letters or numbers in this field.
 html_email_body_2_2 = ', has completed running.
 
-page_close_automatically = This page will be closing automatically.
+page_close_automatically = Esta p\u00E1gina ir\u00E1 fechar automaticamente.
 
 item_initially_entered_on = This item was initially entered on
 no_changed_made_since_item_initially_entered_on = No changes have been made to this data point since it was initially entered on
@@ -1143,7 +1143,7 @@ rules_Import_message1 = Congratulations! Your Rule import passed with no errors.
 rules_Import_message2 = Congratulations! Your Rule import passed with no errors. Some existing Rules or Rule assignments will be updated or replaced. Review the Rule validation results. You can save it to the database by clicking "Continue".
 rules_Import_message3 = Your Rule import had some errors. Review the Rule validation results.
 
-you_received_this_from = <P>You received this email from the OpenClinica system because you are listed as the assigned user for this Discrepancy Note. You will need to log in to OpenClinica with your user name and password after clicking the link. If after login you receive a "page cannot be displayed" message, make sure to select the Change Study/Site link, select the Study referenced above, and try the link again.</P>
+you_received_this_from = <P>You received this email from the LibreClinica system because you are listed as the assigned user for this Discrepancy Note. You will need to log in to LibreClinica with your user name and password after clicking the link. If after login you receive a "page cannot be displayed" message, make sure to select the Change Study/Site link, select the Study referenced above, and try the link again.</P>
 
 disc_note_info = <P>Discrepancy Note Information:</P>
 
@@ -1178,7 +1178,7 @@ two_items_should_be_valid_pair = two Items should be a valid pair
 error_message_cannot_update_crf_version = Cannot update CRF version for the Subject.
 
 
-nested_parent_id = Nested Parent items are not supported by OpenClinica (row\u0020
+nested_parent_id = Nested Parent items are not supported by LibreClinica (row\u0020
 nested_parent_id_1 = ). Please change the value.
 parent_id = The Parent item specified on row\u0020
 parent_id_1 = \u0020does not exist. Please update the value.
@@ -1187,7 +1187,7 @@ items_worksheet_with_dot = Items sheet.\u0020
 group_in_several_sections = Items of one repeating group spread over several sections. Check items in Group '
 default_value_wrong_select = Only one default value is allowed for 'single-select' type in DEFAULT_VALUE column at\u0020
 default_value_wrong_select_1 = Default_value is not part of response options set at row\u0020
-default_value_not_allowed = OpenClinica does not support DEFAULT_VALUES with 'calculation', 'group-calculation', 'instant-calculation' and 'file' RESPONSE_TYPES. Change the RESPONSE_TYPE for this item \u0020
+default_value_not_allowed = LibreClinica does not support DEFAULT_VALUES with 'calculation', 'group-calculation', 'instant-calculation' and 'file' RESPONSE_TYPES. Change the RESPONSE_TYPE for this item \u0020
 PHI_column = PHI column value\u0020
 units_length_error = UNITS field text cannot be more than 64 characters
 
