--- a/i18n/terms_et.properties
+++ b/i18n/terms_et.properties
@@ -1,10 +1,10 @@
 
 
-100percent_required = 100% verplicht
+100percent_required = 100% Required
 
 ASKU = ASKU
 
-Annotation = Notitie
+Annotation = Annotation
 
 Arm = Arm
 
@@ -14,13 +14,13 @@ Boolean = Boolean
 
 Boolean_Non_Null = Boolean Non-Null
 
-City_of_Birth = Geboorteplaats
+City_of_Birth = City of Birth
 
 Closed = Closed
 
-Data_Entry_Person = Data invoer
+Data_Entry_Person = Data Entry Person
 
-Demographic = Demografisch
+Demographic = Demographic
 
 ED = ED
 
@@ -34,21 +34,21 @@ Guest = Guest
 
 INT = INT
 
-INVALID = ongeldig
+INVALID = INVALID
 
-Incomplete = Niet compleet
+Incomplete = Incomplete
 
-Invalid = ongeldig
+Invalid = invalid
 
-Invalid_Type = Ongeldig type
+Invalid_Type = Invalid Type
 
-Investigator = Data invoer
+Investigator = andmete sisestamine
 
 MSK = MSK
 
 Monitor = Monitor
 
-Mother_Maiden_Name = Meisjesnaam moeder
+Mother_Maiden_Name = Mother's Maiden Name
 
 NA = NA
 
@@ -69,9 +69,9 @@ Not_Applicable = Not Applicable
 OTH = OTH
 
 
-Open = Nieuw
+Open = New
 
-Other = Anders
+Other = Other
 
 PINF = PINF
 
@@ -79,7 +79,7 @@ REAL = REAL
 
 Resolution_Proposed = Resolution Proposed
 
-Resolved = Oplossing voorgesteld
+Resolved = Resolution Proposed
 
 SET = SET
 
@@ -87,7 +87,7 @@ ST = ST
 
 Study_Coordinator = Data Manager
 
-Study_Director = Coördinator
+Study_Director = Study Director
 
 System_Administrator = System Administrator
 
@@ -97,26 +97,26 @@ UNK = UNK
 
 URL = URL
 
-Unclear/Unreadable = Onduidelijk/Onleesbaar
+Unclear/Unreadable = Unclear/Unreadable
 
 Updated = Updated
 
 
-added = toegevoegd
+added = added
 
 admin = admin
 
 administrative_editing = administrative editing
 
-all_notes = Alle notities
+all_notes = All Notes
 
 application/vnd.ms-excel = application/vnd.ms-excel
 
-asked_but_unknown = gevraagd maar niet bekend
+asked_but_unknown = asked but unknown
 
-auto-removed = auto-verwijderd
+auto-removed = auto-removed
 
-available = beschikbaar
+available = available
 
 being_validated = being validated
 
@@ -124,19 +124,19 @@ bl = bl
 
 bln = bln
 
-business_administrator = zakelijk administrator
+business_administrator = business administrator
 
 character_string = character string
 
 checkbox = checkbox
 
-complete = Compleet
+complete = Complete
 
-completed = afgerond
+completed = lõpetatud
 
-completed_and_non_completed_items = Data van alle beschikbare CRF's
+completed_and_non_completed_items = Data from all Available CRFs
 
-completed_items = Data van afgeronde CRF's
+completed_items = Data from CRFs Marked Complete
 
 control = control
 
@@ -146,109 +146,109 @@ could_not_be = \ could not be \t
 
 data_being_entered = data being entered
 
-data_entry_complete = invoer afgerond
+data_entry_complete = data entry complete
 
-data_entry_started = data invoer gestart
+data_entry_started = data entry started
 
-date = datum
+date = date
 
-delete = verwijder
+delete = delete
 
 deploy = deploy
 
 director = director
 
-double_data_entry = dubbele data invoer
+double_data_entry = double data entry
 
 ed = ed
 
-edit = wijzigen
+edit = edit
 
 encapsulated_data = encapsulated data
 
 entity_action = entity_action
 
-equal_to = gelijk aan
+equal_to = equal to
 
 failed_login = Failed Login
 
 failed_login_locked = Failed Login ( Account Locked )
 access_code_viewed = Access Code Viewed
-file = bestand
+file = file
 
 floating = floating
 
-frozen = bevroren
+frozen = frozen
 
-genetic = genetisch
+genetic = genetic
 
-greater_than = groter dan
+greater_than = greater than
 
-greater_than_or_equal_to = groter dan of gelijk aan
+greater_than_or_equal_to = greater than or equal to
 
-guest = gast
+guest = guest
 
-initial_data_entry = eerste datainvoer
+initial_data_entry = initial data entry
 
-initial_data_entry_complete = eerste datainvoer afgerond
+initial_data_entry_complete = initial data entry complete
 
-initial_data_entry_completed = eerste datainvoer afgerond
+initial_data_entry_completed = initial data entry completed
 
 int = int
 
-integer = geheel getal
+integer = integer
 
-invalid = ongeldig
+invalid = invalid
 
-investigator = data invoer
+investigator = andmete sisestamine
 
-less_than = minder dan
+less_than = less than
 
-less_than_or_equal_to = minder dan of gelijk aan
+less_than_or_equal_to = less than or equal to
 
-locked = vergrendeld
+locked = locked
 
-masked = gemaskeerd
+masked = masked
 
-monitor = monitor
+monitor = Monitor
 
 multi-select = multi-select
 
 negative_infinity = negative infinity
 
-no_information = geen informatie
+no_information = no information
 
-non_completed_items = Data van niet afgeronde CRF's
+non_completed_items = Data from CRFs not Marked Complete
 
-non_genetic = niet genetisch
+non_genetic = non-genetic
 
-none = Geen
+none = None
 
-not_applicable = Niet van toepassing
+not_applicable = Ei ole kohaldatav
 
-not_asked = niet gevraagd
+not_asked = not asked
 
-not_available = niet beschikbaar
+not_available = not available
 
-not_equal_to = niet gelijk aan
+not_equal_to = not equal to
 
-not_performed = Niet Uitgevoerd
+not_performed = Not Performed
 
-not_present = niet aanwezig
+not_present = not present
 
-not_required = Niet verplicht
+not_required = Not Required
 
-not_scheduled = niet gepland
+not_scheduled = not scheduled
 
-not_started = niet gestart
+not_started = not started
 
 numeric_comparison_operator = numeric comparison operator
 
-other = anders
+other = other
 
-partial_date = gedeeltelijke datum
+partial_date = partial date
 
-partial_required = Gedeeltelijk verplicht
+partial_required = Partial Required
 
 pending = pending
 
@@ -267,21 +267,21 @@ radio = radio
 
 real = real
 
-reason_for_change = Reden wijziging
+reason_for_change = Reason for Change
 
-removed = verwijderd
+removed = removed
 
-restore = ongedaan maken
+restore = restore
 
-restored = ongedaan gemaakt
+restored = restored
 
-role = rol
+role = role
 
-scheduled = gepland
+scheduled = scheduled
 
 set = set
 
-signed = afgetekend
+signed = signed
 
 single_select = single-select
 
@@ -290,63 +290,63 @@ site_Data_Entry_Person2 = Data Entry Person
 
 site_Study_Coordinator = Data Manager
 
-site_Study_Director = Studie Coördinator
+site_Study_Director = Study Director
 
-site_investigator = Data invoer
+site_investigator = Andmete sisestamine
 
 site_monitor = Monitor
 
-skipped = overgeslagen
+skipped = skipped
 
 
-source_data_verification = bron data verificatie
+source_data_verification = source data verification
 
 st = st
 
 status = status
 
-stopped = gestopt
+stopped = stopped
 
 successful_login = Successful Login
 
 successful_logout = Successful Logout
 
-technical_administrator = technische administrator
+technical_administrator = technical administrator
 
-tel = telefoon
+tel = tel
 
-text = tekst
+text = text
 
 text/plain = test/plain
 
-textarea = tekstruimte
+textarea = textarea
 
-treatment = behandeling
+treatment = treatment
 
-unavailable = niet beschikbaar
+unavailable = unavailable
 
-unknown = onbekend
+unknown = unknown
 
-updated = gewijzigd
+updated = Uuendatud
 
-user = gebruiker
+user = user
 
 user_type = user type
 
 validation_completed = validation completed
 
-view = bekijken
+view = view
 
-xml_file_to_upload = XML bestand voor upload
+xml_file_to_upload = Upload an XML file here
 
-Update = Wijzigingen opslaan
-Propose_Resolution = Oplossing voorstellen
-Close = Sluiten
-updaate_note = Notitie toevoegen
-close_note = Notitie sluiten
+Update = Update
+Propose_Resolution = Propose Resolution
+Close = Close
+updaate_note = Update Note
+close_note = Close Note
 rule_import_getting_started = Getting started with rules
 rule_import_example_rules = Example rules
-rule_import_templates = Sjablonen
+rule_import_templates = Templates
 rule_import_resources = Resources
 rule_import_rules_documentation = Rules documentation
 rule_import_cross_field_email = Cross-field edit check (with email action)
@@ -356,9 +356,9 @@ rule_import_all_actions_without_notes = All actions (without comments)
 rule_import_download_rules_xsd = Download LibreClinica rules.xsd
 rule_import_generic = All actions (without comments)
 
-Query_and_Failed_Validation_Check = Query en Validatie mislukt
+Query_and_Failed_Validation_Check = Query and Failed Validation Check
 reset = reset
-New_and_Updated = Nieuw en Gewijzigd
+New_and_Updated = New and Updated
 CRF_Version_Migration_cannot_be_performed_for = CRF Version Migration cannot be performed for
 Both_CRF_versions_are_not_available_at_the_Site = Both CRF versions must be available at the Site.
 The_OID_of_the_Event_that_you_provided_is_invalid = The OID of the Event that you provided is invalid.
