--- a/i18n/terms_ru.properties
+++ b/i18n/terms_ru.properties
@@ -200,7 +200,7 @@ integer = \u0446\u0435\u043B\u043E\u0435
 
 invalid = \u043D\u0435\u0432\u0435\u0440\u043D\u044B\u0439
 
-investigator = \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u0442\u0435\u043B\u044C
+investigator = \u0020
 
 less_than = \u043C\u0435\u043D\u044C\u0448\u0435 \u0447\u0435\u043C
 
@@ -388,4 +388,4 @@ Study = Study
 CRF = CRF
 Batch_CRF_version_migration_has_finished_running = Batch CRF version migration has finished running.
 Batch_Migration_Complete_For = Batch Migration Complete For
-Thank_you_Your_OpenClinica_System = Thank you, Your OpenClinica System
+Thank_you_Your_OpenClinica_System = Thank you, Your LibreClinica System
