--- a/i18n/words_et.properties
+++ b/i18n/words_et.properties
@@ -22,9 +22,9 @@ CRF_data = CRF Data
 
 CRF_description = CRF Description
 
-CRF_info = CRF Header Info
+CRF_info = Andmelehe päise info
 
-CRF_name = CRF Name
+CRF_name = Andmelehe nimi
 
 CRF_spreadsheet_template = CRF Spreadsheet <br>Template
 
@@ -40,9 +40,9 @@ CRF_versions = CRF Versions
 
 CRFs = CRFs
 
-CRFs_atrib = CRFs (Name, Version, Status, Updated, Actions)
+CRFs_atrib = Andmelehed (nimi, versioon, staatus, viimati uuendatud, tegevused)
 
-CRFs_in_this_study_event = CRFs in this Study Event
+CRFs_in_this_study_event = Selle uuringu andmelehed
 
 configure_password_requirements = Configure Password Requirements
 
@@ -181,7 +181,7 @@ action = Action
 
 action_message = Action/Message
 
-actions = Actions
+actions = Tegevused
 
 
 actios = Actions
@@ -212,11 +212,11 @@ add_discrepancy_note = Add Discrepancy Note
 
 add_new = Add New
 
-add_new_event = Schedule New Event
+add_new_event = \u002A
 
 add_new_study_event_for = Add New Study Event for
 
-add_new_subject = Add New Subject
+add_new_subject = \u002A
 
 add_or_remove_items = Add or Remove Items
 
@@ -246,7 +246,7 @@ age_at_enrollment = Age At Enrollment
 
 age_at_event = Age at Event
 
-alerts_messages = Alerts & Messages
+alerts_messages = Teavitused & sõnumid
 
 all = All
 
@@ -383,7 +383,7 @@ cdisc_odm = CDISC ODM 1.2
 
 change_password = Change Password
 
-change_study = Change Study
+change_study = Muuda
 
 change_user_profile = Change User Profile
 
@@ -407,7 +407,7 @@ city_of_birth = City of Birth
 
 click = click
 
-click_for_more_options = Click for more options
+click_for_more_options = Vajuta, et näha rohkem valikuid
 
 click_here_to_continue = Click here to continue
 
@@ -431,7 +431,7 @@ comma_delimited_text = Comma-delimited Text
 
 common = Common
 
-completed = Completed
+completed = Lõpetatud
 
 completed_items = Completed Items
 
@@ -469,7 +469,7 @@ confirm_and_submit_study = Confirm & Submit<br>Study
 
 confirm_changes = Confirm Changes
 
-confirm_changing_study = Confirm Changing Study
+confirm_changing_study = Kinnita
 
 confirm_dataset_properties = Confirm Dataset Properties
 
@@ -547,7 +547,7 @@ confirm_study_access = Confirm Study Access
 
 confirm_study_details = Confirm Study Details
 
-confirm_study_subject_updates = Confirm Study Subject Updates
+confirm_study_subject_updates = Kinnita uuritava muudatused
 
 confirm_subject_details = Confirm Subject Details
 
@@ -581,7 +581,7 @@ congratulations_your_spreadsheet = <b>Congratulations!</b> Your spreadsheet gene
 
 congratulations_your_spreadsheet_no_errors = <b>Congratulations!</b>  Your spreadsheet generated no errors.<br/><b>Please review it.<br> You can save it to database by clicking "Continue".</b>
 
-contact = Contact
+contact = Kontakt
 
 contact_email = Contact Email
 
@@ -617,7 +617,7 @@ create_CRF = Create CRF
 
 create_CRF_version = Create CRF Version
 
-create_SED_for = Create Study Event Definition for
+create_SED_for = \u002A
 
 create_a_new_CRF = Create a New CRF
 
@@ -808,7 +808,7 @@ duration = Duration
 
 e_signature = E-Signatures
 
-edit = Edit
+edit = Muuda
 
 edit_CRF = Edit CRF
 
@@ -876,7 +876,7 @@ enrolled = Enrolled
 
 enrollment_date = Enrollment Date
 
-enter_data = Enter Data
+enter_data = Andmete sisestamine
 
 enter_definition_name_and_description = Enter<br>Definition Name<br>& Description
 
@@ -910,7 +910,7 @@ error_page = <P>This can be for a number of reasons, which may or may not have t
 
 estimated_completion_date = Estimated Completion Date
 
-event = Event
+event = Uuring
 
 eventMMDDYYYY = Event
 
@@ -950,11 +950,11 @@ event_status = Event Status
 
 event_type = Event Type
 
-events = Events
+events = Sündmused
 
 example_CRF_br_spreadsheets = Example CRF <br>Spreadsheets
 
-exit = Exit
+exit = Välju
 
 expected_enrollment = Expected Enrollment
 
@@ -1009,13 +1009,13 @@ filter_preview = Filter Preview
 
 filter_query_design = Filter Query Design:
 
-find = Find
+find = Otsi
 
 first_name = First Name
 
 first_page = first page
 
-forgot_password = Forgot Password?
+forgot_password = Unustasid parooli?
 
 form_data_not_modified = Form Data Not Modified
 
@@ -1043,7 +1043,7 @@ generated_filter = Generated Filter
 
 global_subject_record = Global Subject Record
 
-go = Go
+go = Mine
 
 go_back = Go Back
 
@@ -1061,7 +1061,7 @@ go_back_to_study_list = Go Back to Study List
 
 go_back_to_study_subject_list = Go Back to Study Subject List.
 
-go_back_to_subject_list = Go Back to Subject List
+go_back_to_subject_list = Mine tagasi uuritavate nimekirja
 
 go_back_to_user_list = Go Back to User List
 
@@ -1093,7 +1093,7 @@ header = Header
 
 healthy_volunteers_accepted = Healthy Volunteers Accepted
 
-help = Documentation
+help = Dokumentatsioon
 
 here = here
 
@@ -1105,7 +1105,7 @@ how_to_generate_the_study_subject_ID = How to Generate the Study Subject ID?
 
 how_to_generate_the_subject = How to Generate the Subject Person ID?
 
-icon_key = Icon Key
+icon_key = Ikoonide seletus
 
 icon_or_nothing = icon.
 
@@ -1137,7 +1137,7 @@ indicates_required_field = indicates required field.
 
 info = Info
 
-initial_data_entry = Initial Data Entry
+initial_data_entry = Esmane andmesisestus
 
 initial_data_entry_complete = Initial Data Entry Completed
 
@@ -1145,7 +1145,7 @@ initial_data_entry_for = Initial Data Entry for
 
 institutional_affiliation = Institutional Affiliation
 
-instructions = Instructions
+instructions = Juhised
 
 instructions_extract_select_CRF_and_group = <p>Please select one CRF from the left side info panel, then select one or more items in a CRF that you would like to include to this dataset. You may select all items in the study by going to the "View Selected Items" (hyperlink) page and clicking "Select All".</p><p>You may also click Event Attributes/CRF/Subject Attributes to specify which event/CRF/subject attribute will be shown in the dataset.</p>
 
@@ -1232,7 +1232,7 @@ list_create_SED_for = <li> A <b>Scheduled event</b> is one that is expected to o
 
 loading = Loading
 
-location = Location
+location = Asukoht
 
 lock = Lock
 
@@ -1242,13 +1242,13 @@ lock_event_definition = Lock Event Definition
 
 locked = Locked
 
-log_out = Log Out
+log_out = Logi välja
 
 logging_out = Logging Out...
 
 logical_connector = Logical Connector
 
-login = Login
+login = Logi sisse
 
 longest_run_time = Longest Run Time
 
@@ -1268,7 +1268,7 @@ mange_users = Manage Users
 
 manual_entry = Manual Entry
 
-mark_CRF_complete = Mark CRF Complete
+mark_CRF_complete = Märgi andmeleht lõpetatuks
 
 mark_complete = Mark Complete
 
@@ -1298,7 +1298,7 @@ minutes = minutes
 
 monthly = Monthly
 
-more = More
+more = Rohkem
 
 mother = Mother
 
@@ -1324,7 +1324,7 @@ new = New
 
 new_password = New Password
 
-news = News
+news = Uudised
 
 next = Next
 
@@ -1396,13 +1396,13 @@ number_of_subjects_enrolled = Number of Subjects Enrolled
 
 observational = Observational
 
-occurrence_number = Occurrence Number
+occurrence_number = Juhtumi number
 
 occurrence_x_of = Occurrence: {0} of
 
 ocurrence = Occurrence
 
-of = of
+of = enne
 
 of_CRFs = # of CRFs
 
@@ -1422,11 +1422,11 @@ openclinica = LibreClinica
 
 openclinica_enterprise = OpenClinica Enterprise
 
-openclinica_feedback = Support
+openclinica_feedback = Tugi
 
 openclinica_home = Openclinica Home
 
-openclinica_portal = LibreClinica Website
+openclinica_portal = cosi veebileht
 
 openclinica_print_study_events = LibreClinica-Print Study Events
 
@@ -1456,7 +1456,7 @@ overview = Overview
 
 owner = Owner
 
-page = Page
+page = Lehekülg
 
 page_number_label = Page Number Label
 
@@ -1472,7 +1472,7 @@ parent_note = Parent Note
 
 parent_study = Parent Study
 
-password = Password\t
+password = Parool\t
 
 password_challenge_answer = Password Challenge Answer
 
@@ -1697,7 +1697,7 @@ restore_user_role = Restore User Role
 
 results_reference = Results Reference?
 
-return_to_top = Return to top
+return_to_top = Mine tagasi algusesse
 
 revise_CRF_version = Revise CRF Version
 
@@ -1714,7 +1714,7 @@ roles = Roles
 
 run_time = Run Time (Seconds)
 
-save = Save
+save = Salvesta
 
 save_and_add_more_items = Save and Add More Items
 
@@ -1732,7 +1732,7 @@ schedule_another_event = Schedule Another Event: (optional)
 
 schedule_study_event_for = Schedule Study Event for
 
-scheduled = Scheduled
+scheduled = Planeeritud
 
 secondary_ID = Secondary ID
 
@@ -1785,7 +1785,7 @@ select_all = Select All
 select_all_groups = Select All Groups
 
 select_all_items = Select All Items
-select_an_event = Select An Event
+select_an_event = Vali tegevus
 
 select_any_group_class_for_details_on_it_records = Select any group class for details on its records and associated subjects.
 
@@ -1833,9 +1833,9 @@ show_all_datasets = Show All Datasets
 
 show_calendar = Show Calendar
 
-show_less = Show Less
+show_less = Näita vähem
 
-show_more = Show More
+show_more = Näita rohkem
 
 show_only_my_datasets = Show only My Datasets
 
@@ -1843,7 +1843,7 @@ show_person_id_on_crf_header = Show Person ID on CRF Header?
 
 show_user_password_to_admin = Show User Password to Admin
 
-sign = Sign
+sign = Tunnus
 
 sign_subject = Sign Subject
 
@@ -1857,7 +1857,7 @@ site_system_status = Site Status for this study
 
 skip_apply_filter_and_save = Skip Apply Filter and Save
 
-skipped = Skipped
+skipped = Vahele jäetud
 
 specify = Specify
 
@@ -1881,7 +1881,7 @@ spss = SPSS
 
 start_date = Start Date
 
-start_date1 = Start Date
+start_date1 = Algusaeg
 
 start_date_of_first_event = start date of first Event
 
@@ -1894,7 +1894,7 @@ start_initial_data_entry = start initial data entry
 
 started = Started
 
-status = Status
+status = Staatus
 
 status_and_design = Status<br>&<br>Design
 
@@ -1902,7 +1902,7 @@ status_set = Status Set
 
 statuses = Statuses
 
-stopped = Stopped
+stopped = Peatatud
 
 studies = Studies
 
@@ -1952,7 +1952,7 @@ study_status_and_design = Study Status and Design
 
 study_subject = Study Subject
 
-study_subject_ID = Study Subject ID
+study_subject_ID = Uuritava ID
 
 study_subject_group = Study Subject Group
 
@@ -1960,7 +1960,7 @@ study_subject_label = Study Subject Label
 
 study_subject_oid = Study Subject OID
 
-study_subject_record = Study Subject Record
+study_subject_record = Rohkem infot
 
 study_system_status = Study System Status
 
@@ -1968,7 +1968,7 @@ study_title_description = Study<br>Title &<br>Description
 
 study_user_role = Study User Role
 
-subject = Subject
+subject = Uuritav
 
 subject_ID = Subject ID
 
@@ -2023,7 +2023,7 @@ submit_account_reset = Submit Account Request
 
 submit_changes = Submit Changes
 
-submit_data = Submit Data
+submit_data = Esita andmed
 
 submit_data_home = Submit Data Home
 
@@ -2043,7 +2043,7 @@ subtitle = Subtitle
 
 summary_statistics = Summary Statistics
 
-sure_to_cancel = Are you sure you want to Cancel? Select the OK button if you would like to Cancel the transaction. Select the Cancel button if you would like to remain on the page.
+sure_to_cancel = Kas oled kindel, et soovid tühistada? Kui soovid toimingu tühistada, vali OK. Kui soovid jääda lehele, vali Cancel.
 
 sure_to_sign_subject = Enter your user name and password below to signify agreement with the following statement:
 
@@ -2134,7 +2134,7 @@ this_subject_has_data_from_events_restore = This subject has data from events sh
 
 timing = Timing:
 
-title = Title
+title = Pealkiri
 
 
 today = Today
@@ -2229,7 +2229,7 @@ users_and_roles = Users and Roles
 
 valid_data_imported = Valid Data Import
 
-validation = Double Data Entry
+validation = Teistkordne andmete sisestus
 
 validation_error_generated = Validation Error Checks Generated
 
@@ -2244,7 +2244,7 @@ validation_rules_generated = Validation Rules Generated
 value = Value
 
 
-version = Version
+version = Versioon
 
 version2 = Version(s)
 
@@ -2260,7 +2260,7 @@ version_selection = Available Versions (Default version will be included.)
 
 versions = Version(s)
 
-view = View
+view = Vaata
 
 view_CRF = View CRF
 
@@ -2358,7 +2358,7 @@ view_subject_details = View Subject Details
 
 view_subjects = View Subjects
 
-view_this_subject_record = View this Subject's Record
+view_this_subject_record = Rohkem infot
 
 view_user_account = View User Account
 
@@ -2425,7 +2425,7 @@ value_type = Value Type
 old = Old
 complete_audit_log_for = Complete Audit Logs for
 delete_date = Delete Date
-sure_to_exit = Are you sure you want to Exit? Select the OK button if you would like to Exit the transaction. Select the Cancel button if you would like to remain on the page.
+sure_to_exit = Kas oled kindel, et soovid väljuda? Kui soovid toimingust väljuda, vali OK. Kui soovid lehele jääda, vali Cancel.
 
 
 crf_notes = Discrepancy Notes
@@ -2453,7 +2453,7 @@ rule_import_rule = Import Rule Assignments
 rule_expression = Expression
 rule_name = Rule Name
 rule_execute_on = Execute On
-rule_actions = Actions
+rule_actions = Tegevused
 rule_action_summary = Action Summary
 rule_status = Status
 rule_ref_oid = RuleRef OID
@@ -2547,7 +2547,7 @@ hidden_crf = Hide CRF
 crf_is_hidden = The CRF is hidden
 
 studies_using_crf = Studies Using This CRF For Data Entry
-data_entry_started = Data Entry Started
+data_entry_started = Andmete sisestamist on alustatud
 item_status = Item Status
 server_time_info = Note that the 'Login Attempt Date field' is based on server time.  The current server time is
 
@@ -2575,13 +2575,13 @@ create_site_properties = Create Site Properties
 set_study_status = Set Study Status
 
 
-nav_change_study_site = Change Study/Site
-nav_log_out = Log Out
+nav_change_study_site = Vaheta kooli
+nav_log_out = Logi välja
 nav_home = Home
-nav_subject_matrix = Subject Matrix
+nav_subject_matrix = Andmete sisestamine
 nav_build_study = Build Study
-nav_notes_and_discrepancies = Notes &amp; Discrepancies
-nav_tasks = Tasks
+nav_notes_and_discrepancies = Märkused & kommentaarid
+nav_tasks = Ülesanded
 nav_add_subject = Add Subject
 nav_sdv = SDV
 nav_report_issue = Report Issue
@@ -2592,9 +2592,9 @@ nav_monitor_and_manage_data = Monitor and Manage Data
 nav_view_events = View Events
 nav_source_data_verification = Source Data Verification
 nav_study_audit_log = Study Audit Log
-nav_extract_data = Extract Data
-nav_view_datasets = View Datasets
-nav_create_dataset = Create Dataset
+nav_extract_data = Andmete väljavõte
+nav_view_datasets = Vaata andmestikke
+nav_create_dataset = Loo andmestik
 nav_schedule_event = Schedule Event
 nav_import_data = Import Data
 nav_submit_data = Submit Data
@@ -2608,15 +2608,15 @@ nav_sites = Sites
 nav_administration = Administration
 nav_studies = Studies
 nav_jobs = Jobs
-nav_subjects = Subjects
-nav_other = Other
-nav_update_profile = Update Profile
+nav_subjects = Uuritavad
+nav_other = Muu
+nav_update_profile = Uuenda profiili
 nav_view_study = View Study
 design = Design
 forced_reason_for_change = Forced Reason For Change in Administrative Editing?
 table_filter_instructions = Enter filter criteria below :
-table_apply_filter = Apply Filter
-table_clear_filter = Clear Filter
+table_apply_filter = Rakenda filtrid
+table_clear_filter = Tühista filtrid
 table_sdv_select = Select:
 table_sdv_all = All Shown
 table_sdv_none = None
@@ -2759,7 +2759,7 @@ crf_more_info = Click the arrow to the right for more info\t
 tooltip_title1 = Notes and Discrepancies
 tooltip_name_title = Interviewer Name
 tooltip_date_title = Interviewer Date
-footNote = Click to add a discrepancy note\t
+footNote = Vajuta, et lisada märkus\t
 footNote_threads = Click to view or reply.
 foot_threads = thread(s).
 days_since_updated = Days Since Updated
@@ -2768,7 +2768,7 @@ days_open = Days Open
 email_assigned_user = Email Assigned User
 assign_to_user = Assign to User
 submit_exit = Submit & Exit
-submit_close = Submit & Close
+submit_close = Esita & sule
 add_note = Add Note
 
 Audit_History = Audit History
@@ -2779,7 +2779,7 @@ Data_Dictionary = Data Dictionary
 Last_updated = Last Updated
 Assigned_to = Assigned to
 Current_Value = Current Value
-More = More
+More = Rohkem
 authorized_run_web_services = Authorized to execute SOAP web services in this account
 can_run_web_services = Authorize SOAP web services in this account
 id_generated_Save_Add = ID will be generated on Save or Add
@@ -2821,7 +2821,7 @@ batch_comma = Batch,
 
 not_scheduled_comma = Not Scheduled,
 scheduled_comma = Scheduled,
-data_entry_started_comma = Data Entry Started,
+data_entry_started_comma = Andmete sisestamist on alustatud,
 completed_comma = Completed,
 skipped_comma = Skipped,
 stopped_comma = Stopped,
@@ -3087,7 +3087,7 @@ add_new_study_screen_content = <b>Good news: OpenClinica 4 is ready to power you
 
 crf_item_reserveditemname = Item name cannot be a reserved name.
 batch_crf_version_migration = Batch CRF Version Migration
-crf_name = CRF Name
+crf_name = Andmelehe nimi
 current_version_of = Current version of
 new_version_of = New version of
 list_of_sites = Site(s)
