--- a/i18n/words_nl.properties
+++ b/i18n/words_nl.properties
@@ -146,7 +146,7 @@ Role_of_Access_Requested_Pending_Approval = Role of Access Requested: (Pending A
 SDV_complete = SDV Complete
 
 SDV_requirement = SDV Requirement
-
+Version_release = Versie: 3.3-Community
 SDV_status = SDV Status
 
 SE = Bezoek
@@ -170,7 +170,7 @@ UNK = UNK
 URL_description = URL Description:
 
 URL_reference = URL Reference
-Version_release = Versie: 3.3-Community
+
 YOB = YOB: YYYY
 
 Years = Years
@@ -227,7 +227,7 @@ added_filter = Added Filter
 administer_studies = Studies beheren
 
 administer_study = Administer Study
-
+all_data_associated_with_the_CRF_in_this_event = All data associated with the CRF in this Event will be removed.
 administer_subjects = Administer Subjects
 
 administer_users = Gebruikers beheren
@@ -250,9 +250,9 @@ alerts_messages = Waarschuwingen & mededelingen
 
 all = All
 
-all_data_associated_with_the_CRF_in_this_event = All data associated with the CRF in this Event will be removed.
 all_data_associated_with_the_CRF_in_this_event_will_be_removed = Data in removed Event CRFs are retained and viewable on the form, but not included in any extracted data sets. The removed Event CRF can be restored at any time. All Notes & Discrepancies associated with this Event CRF will be automatically closed.
 all_data_associated_with_the_CRF_in_this_event_will_be_restored = All data associated with the CRF in this Event will be restored.
+
 all_events = All Events
 
 all_fields_are_required = Alle velden zijn verplicht.
@@ -383,7 +383,7 @@ cdisc_odm = CDISC ODM 1.2
 
 change_password = Verander wachtwoord
 
-change_study = Ga naar een andere school
+change_study = Verander
 
 change_user_profile = Gebruikers gegevens wijzigen
 
@@ -469,7 +469,7 @@ confirm_and_submit_study = Studie bevestigen en <br> opslaan
 
 confirm_changes = Wijzigingen bevestigen
 
-confirm_changing_study = Veranderen van Studie/Centrum bevestigen
+confirm_changing_study = Bevestigen
 
 confirm_dataset_properties = Confirm Dataset Properties
 
@@ -907,7 +907,7 @@ equal_to = equal to
 
 error_encountered = Error Encountered
 
-error_page = <P>This can be for a number of reasons, which may or may not have to do with the OpenClinica application.  If there are any system messages above this text, please copy and paste them into the<a href="https://issuetracker.openclinica.com/bug_report_page.php"> Report Issue Form</a>. <P>If there are no other messages, you might try clicking on the links in the navigation, and see what happens.  This might  reinitialize your connection with the database. Or <a href="{0}">click here</a> to go back to where you came from. <P>If you can't get back to a working page, please let us know!  Please be sure to include <ul> <li>what you were doing, <li>when it happened, <li>and any other details (like error messages) that might be important. </ul> <P>Thank you! <P>The OpenClinica Development Team
+error_page = <P>This can be for a number of reasons, which may or may not have to do with the LibreClinica application. If there are any system messages above this text, you may want to report them to your Administrator. <P>If there are no other messages, you might try clicking on the links in the navigation, and see what happens. This might reinitialize your connection with the database. Or <a href="{0}">click here</a> to go back to where you came from. <P>Thank you! <P>The LibreClinica Development Team
 
 estimated_completion_date = Estimated Completion Date
 
@@ -1048,7 +1048,7 @@ go = Ga
 
 go_back = Go Back
 
-go_back_build_study_page = Ga naar de pagina Studie Bewerken
+go_back_build_study_page = Studie Bewerken
 
 go_back_home = Go Back Home
 
@@ -1057,17 +1057,17 @@ go_back_to_CRF_list = Go Back to CRF List
 go_back_to_definition_list = Ga naar de lijst met bezoeken
 
 go_back_to_site_list = Go Back to Site List
-footer.edition.1 = Unsupported
+
 go_back_to_study_list = Go Back to Study List
-footer.edition.2 = Community Edition
+
 go_back_to_study_subject_list = Go Back to Study Subject List.
-footer.license.1 = &copy; 2004-2011 Akaza Research LLC and collaborators. The Program is provided AS IS, without warranty.
+
 go_back_to_subject_list = Terug naar het hoofdscherm
-footer.license.2 = <a target="_blank" href="http://www.openclinica.org/OpenClinica/3.0/license">Licensed under LGPLv2.1</a>. The program is free software; you can redistribute it and/or modify it under the
-footer.license.3 = terms of the GNU Lesser General Public License version 2.1 as published by the Free Software Foundation.
+
 go_back_to_user_list = Ga terug naar de lijst van Gebruikers
-footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM) are trademarks of OpenClinica LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of OpenClinica LLC, and is not certified, approved,<br/>or sponsored by OpenClinica LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other OpenClinica products.
+
 go_back_to_view_subject = Go Back to View Subject
+
 greater_than = groter dan
 
 greater_than_or_equal = groter dan of gelijk aan
@@ -1088,7 +1088,7 @@ groups = Groups
 
 hard_validation_error_checks = Hard Validation Error Checks
 
-have_logged_out_application = You have logged out of the application. Please go to the <a href="MainMenu">Login Page</a> in order to re-enter OpenClinica.
+have_logged_out_application = You have logged out of the application. Please go to the <a href="MainMenu">Login Page</a> in order to re-enter LibreClinica.
 
 header = Header
 
@@ -1126,7 +1126,7 @@ import_CDISC_ODM_XML_into_SAS = Import CDISC ODM XML into SAS using the PROC CDI
 
 import_error = Import Errors
 
-in_progress = In Progress
+in_progress = Gestart
 
 in_the_application = In de applicatie hebt u momenteel
 
@@ -1194,7 +1194,7 @@ item_metadata = Item Metadata
 
 item_name = Item Name
 
-item_names_are_shared_across_different_versions = Item Names are <b>shared</b> across different versions of a CRF in OpenClinica system. The CRF version upload process automatically detects Item Names that are new to this CRF and haven't been included in previous versions of this CRF.</p> <p>If any new Item Names were detected in the spreadsheet, they are listed below. If an exsiting item's properties will be changed, it is listed below  as well. Names in the list below will be added or changed in the database if you decide to continue.</p> <p>If there are no new Item Names or changes, which means all the Items Names in this CRF Version already exist for this CRF, the list below will be empty. <br><br><b>If you have made a mistake, <a href="ListCRF">please go back to the CRF List</a> and upload your spreadsheet again.</b></p>
+item_names_are_shared_across_different_versions = Item Names are <b>shared</b> across different versions of a CRF in LibreClinica system. The CRF version upload process automatically detects Item Names that are new to this CRF and haven't been included in previous versions of this CRF.</p> <p>If any new Item Names were detected in the spreadsheet, they are listed below. If an exsiting item's properties will be changed, it is listed below  as well. Names in the list below will be added or changed in the database if you decide to continue.</p> <p>If there are no new Item Names or changes, which means all the Items Names in this CRF Version already exist for this CRF, the list below will be empty. <br><br><b>If you have made a mistake, <a href="ListCRF">please go back to the CRF List</a> and upload your spreadsheet again.</b></p>
 
 
 items_pending_validation = Items Pending Validation
@@ -1429,7 +1429,7 @@ openclinica_home = Openclinica Home
 
 openclinica_portal = cosi website
 
-openclinica_print_study_events = OpenClinica-Print Study Events
+openclinica_print_study_events = LibreClinica-Print Study Events
 
 openclinica_report_issue = Fout melden
 
@@ -1530,7 +1530,7 @@ print_all_available_crf = Alle beschikbare CRF's afdrukken
 
 print_default = Afdrukken
 
-print_discrepancy_notes = OpenClinica-Print Discrepancy Notes
+print_discrepancy_notes = LibreClinica-Print Discrepancy Notes
 
 print_entire_CRF = Print Entire CRF
 
@@ -2066,7 +2066,7 @@ task = Taak
 technical_administrator = Technische administrator
 
 template = sjabloon
-
+this_crf_has_data = Dit CRF bevat data. Weet u zeker dat u het wilt verwijderen?
 test_rule = Rule
 
 test_rule_default_result = Please provide a target and a rule and then press Submit
@@ -2116,7 +2116,7 @@ there_are_no_CRF = Er zijn geen CRF's in dit bezoek.
 there_are_no_sections = There are no sections in this Event CRF.
 
 there_are_not_sections_in_this_CRF = There are no sections in this CRF Version.
-this_crf_has_data = Dit CRF bevat data. Weet u zeker dat u het wilt verwijderen?
+
 this_CRF_has_data_want_delete = Dit CRF bevat data. Weet u zeker dat u het wilt verwijderen?
 this_crf_has_data_remove = This CRF has data. Are you sure you want to remove it? All Notes & Discrepancies associated with this Event CRF will be automatically closed. The Event CRF status will be set to Removed/Invalid.
 this_crf_has_data_restore = This CRF has data. Are you sure you want to restore it?
@@ -2212,7 +2212,7 @@ user_name = Gebruikersnaam
 
 user_page = User Page
 
-user_password_generated = User Password<br>(generated by system)
+user_password_generated = Wachtwoord <br />(gegenereerd door het systeem)
 
 user_role_requested = User Role Requested
 
@@ -2665,7 +2665,7 @@ successful_rule_upload = {0} Rule(s) and {1} Rule Assignment(s) were uploaded su
 this_removed = This has been removed.
 
 available = Beschikbaar
-frozen = Frozen
+frozen = Bevroren
 rule_verify_import_valid_rules_num = <b>#</b> of new rules:
 rule_verify_import_invalid_rules_num = <b>#</b> of invalid rules:
 rule_verify_import_dup_valid_rules_num = <b>#</b> of rule updates:
@@ -2782,7 +2782,7 @@ Assigned_to = Toegewezen aan
 Current_Value = Huidige waarde
 More = Meer info
 authorized_run_web_services = Mag met SOAP web services uitvoeren
-can_run_web_services = Authorize SOAP web services in this account
+can_run_web_services = Sta gebruiker toe SOAP te gebruiken
 id_generated_Save_Add = Een ID zal gegenereerd worden.
 rule_crf_view_rules_for_this_crf = Bekijk de Regels voor dit CRF
 rule_go_back_to_Manage_rules = Go Back to Manage Rules
@@ -2800,19 +2800,19 @@ assign_study_user_note = Note\: If you wish to assign users to a site you must f
 that_study = logged into that study.
 
 that_site = logged into that site.
-
+footer.license.1 = &copy; 2004-2011 Akaza Research LLC and collaborators. The Program is provided AS IS, without warranty.
 view_within_crf = Bekijken in het CRF
-
+footer.license.2 = <a target="_blank" href="http://www.openclinica.org/OpenClinica/3.0/license">Licensed under LGPLv2.1</a>. The program is free software; you can redistribute it and/or modify it under the
 rule_designer = Rule Designer
-
+footer.license.3 = terms of the GNU Lesser General Public License version 2.1 as published by the Free Software Foundation.
 language = taal.
+footer.edition.1 = Unsupported
 
-
+footer.edition.2 = Community Edition
 scheduled_export_data_jobs = Scheduled Export Data Jobs
-
+footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM) are trademarks of OpenClinica LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of OpenClinica LLC, and is not certified, approved,<br/>or sponsored by OpenClinica LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other OpenClinica products.
 view_currently_executing_data_export_jobs = View Currently Executing Data Export Jobs
 currently_executing_data_export_jobs = Currently Executing Data Export Jobs
-
 run_on_colon = Uitvoeren op:
 IDE_comma = InitialDataEntry,
 DDE_comma = DoubleDataEntry,
@@ -2837,7 +2837,7 @@ reassign_crf_version = Gegevens aan een nieuwe CRF versie toekennen
 
 
 404_error_msg_header = 404: Page not found
-404_error_msg_body = <P>Sorry, but the page you are looking for has not been found. Please use the menu options in the navigation bar above to navigate to where you want to go. If you continue to get this error, please click the 'Report Issue' in the navigation bar above and let us know how you are getting to this page.<P>Thank you! <P>The OpenClinica Development Team
+404_error_msg_body = <P>Sorry, but the page you are looking for has not been found. Please use the menu options in the navigation bar above to navigate to where you want to go. If you continue to get this error, please click the 'Report Issue' in the navigation bar above and let us know how you are getting to this page.<P>Thank you! <P>The LibreClinica Development Team
 
 choose_CRF_version = Reassign CRF to a New Version
 
