--- a/i18n/words_pt.properties
+++ b/i18n/words_pt.properties
@@ -146,7 +146,7 @@ Role_of_Access_Requested_Pending_Approval = Regras de acesso requisitado: (aprov
 SDV_complete = SDV Complete
 
 SDV_requirement = SDV Requirement
-
+Version_release = Vers\u00e3o: 3.1.4.1 UFES
 SDV_status = SDV Status
 
 SE = Evento de estudo
@@ -170,7 +170,7 @@ UNK = UNK
 URL_description = Descri\u00e7\u00e3o URL
 
 URL_reference = Refer\u00eancia URL
-Version_release = Vers\u00e3o: 3.1.4.1 UFES
+
 YOB = YOB: YYYY
 
 Years = Anos
@@ -227,7 +227,7 @@ added_filter = Filtro adicionado
 administer_studies = Administra estudos
 
 administer_study = Administra estudo
-
+all_data_associated_with_the_CRF_in_this_event = Todos os dados associados a esse CRF neste evento ser\u00e3o removidos.
 administer_subjects = Administra pacientes
 
 administer_users = Administra usu\u00e1rios
@@ -250,9 +250,9 @@ alerts_messages = Alertas e mensagens
 
 all = Todos
 
-all_data_associated_with_the_CRF_in_this_event = Todos os dados associados a esse CRF neste evento ser\u00e3o removidos.
 all_data_associated_with_the_CRF_in_this_event_will_be_removed = Data in removed Event CRFs are retained and viewable on the form, but not included in any extracted data sets. The removed Event CRF can be restored at any time. All Notes & Discrepancies associated with this Event CRF will be automatically closed.
 all_data_associated_with_the_CRF_in_this_event_will_be_restored = All data associated with the CRF in this Event will be restored.
+
 all_events = All Events
 
 all_fields_are_required = Todos os campos precisam ser preenchidos.
@@ -329,7 +329,7 @@ associated_study_subjects = Pacientes de estudo associado
 
 audit_logs = Audit Logs
 
-audit_exist = Audit Log Exists
+audit_exist = O log de auditoria existe
 
 audit_user_activity = Audit User Activity
 
@@ -469,7 +469,7 @@ confirm_and_submit_study = Confirme e submeta<br>Estudo
 
 confirm_changes = Confirme altera\u00e7\u00f5es
 
-confirm_changing_study = Confirme altera\u00e7\u00f5es do estudo
+confirm_changing_study = Confirme
 
 confirm_dataset_properties = Confirme propriedades dos dados
 
@@ -1056,17 +1056,17 @@ go_back_to_CRF_list = Voltar a lista de CRF
 go_back_to_definition_list = Voltar a lista de defini\u00e7\u00e3o
 
 go_back_to_site_list = Voltar a lista de centros
-footer.edition.1 = Unsupported
+
 go_back_to_study_list = Voltar a lista de estudos
-footer.edition.2 = Community Edition
+
 go_back_to_study_subject_list = Voltar a lista de pacientes de estudo.
-footer.license.1 = &copy; 2004-2013 OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a>
-go_back_to_subject_list = Voltar a lista de pacientes
-footer.license.2 = <a target="_blank" href="http://www.openclinica.org/OpenClinica/3.0/license">Licensed under LGPLv2.1</a>. The program is free software; you can redistribute it and/or modify it under the
-footer.license.3 = terms of the GNU Lesser General Public License version 2.1 as published by the Free Software Foundation.
+
+go_back_to_subject_list = Voltar \u00E0 lista de casos
+
 go_back_to_user_list = Voltar a lista de usu\u00e1rios
-footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM), and Akaza Research(R)<br/> are trademarks of Akaza Research LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of Akaza Research LLC, and is not certified, approved,<br/>or sponsored by Akaza Research LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other Akaza products.
+
 go_back_to_view_subject = Voltar para visualizar paciente
+
 greater_than = maior que
 
 greater_than_or_equal = igual ou maior que
@@ -1125,7 +1125,7 @@ import_CDISC_ODM_XML_into_SAS = Importar CDISC ODM XML ao SAS usando o comando P
 
 import_error = Import Errors
 
-in_progress = In Progress
+in_progress = Em progresso
 
 in_the_application = Na aplica\u00e7\u00e3o, voc\u00ea atualmente tem
 
@@ -1210,7 +1210,7 @@ last_name = Último nome
 
 last_page = Última p\u00e1gina
 
-last_update = Última atualiza\u00e7\u00e3o
+last_update = \u00DAltima atualiza\u00E7\u00E3o
 
 last_updated_by = Última atualiza\u00e7\u00e3o por
 
@@ -1242,7 +1242,7 @@ lock_event_definition = Bloquear defini\u00e7\u00e3o de evento
 
 locked = Bloqueado
 
-log_out = Deslogar
+log_out = Log out
 
 logging_out = Deslogando...
 
@@ -1785,7 +1785,7 @@ select_all = Select All
 select_all_groups = Selecionar todos os grupos
 
 select_all_items = Selecionar todos os itens
-select_an_event = Select An Event
+select_an_event = Selecionar um evento
 
 select_any_group_class_for_details_on_it_records = Selecione uma classe de grupo para obter detalhes sobre seus registros e pacientes associados.
 
@@ -1843,7 +1843,7 @@ show_person_id_on_crf_header = Mostrar ID da pessoa no cabe\u00e7alho do CRF?
 
 show_user_password_to_admin = Mostrar senha de usu\u00e1rio ao Admin.
 
-sign = Sign
+sign = Assinar
 
 sign_subject = Sign Subject
 
@@ -1894,7 +1894,7 @@ start_initial_data_entry = come\u00e7ar entrada de dados inicial
 
 started = Iniciado
 
-status = Status
+status = Estado
 
 status_and_design = Status<br>&<br>Design
 
@@ -1952,7 +1952,7 @@ study_status_and_design = Status de estudo e design
 
 study_subject = Paciente de estudo
 
-study_subject_ID = Code
+study_subject_ID = C\u00F3digo
 
 study_subject_group = Study Subject Group
 
@@ -1968,7 +1968,7 @@ study_title_description = T\u00edtulo do<br>estudo &<br>descri\u00e7\u00e3o
 
 study_user_role = Papel do usu\u00e1rio do estudo
 
-subject = Paciente
+subject = Caso
 
 subject_ID = ID de paciente
 
@@ -2043,7 +2043,7 @@ subtitle = Subt\u00edtulo
 
 summary_statistics = Summary Statistics
 
-sure_to_cancel = Are you sure you want to Cancel? Select the OK button if you would like to Cancel the transaction. Select the Cancel button if you would like to remain on the page.
+sure_to_cancel = De certeza que deseja sair? Por favor selecione OK se deseja sair da p\u00E1gina. Selecione o CANCELAR se deseja continuar na p\u00E1gina.
 
 sure_to_sign_subject = Enter your user name and password below to signify agreement with the following statement:
 
@@ -2065,7 +2065,7 @@ task = Task
 technical_administrator = Administrador t\u00e9cnico
 
 template = modelo
-
+this_crf_has_data = Este CRF tem dados. Est\u00e1 certo que quer remov\u00ea-lo?
 test_rule = Rule
 
 test_rule_default_result = Please provide a target and a rule and then press Submit
@@ -2115,7 +2115,7 @@ there_are_no_CRF = N\u00e3o h\u00e1 CRFs neste evento de estudo.
 there_are_no_sections = N\u00e3o h\u00e1 se\u00e7\u00f5es neste CRF de evento.
 
 there_are_not_sections_in_this_CRF = N\u00e3o h\u00e1 se\u00e7\u00f5es nesta vers\u00e3o de CRF.
-this_crf_has_data = Este CRF tem dados. Est\u00e1 certo que quer remov\u00ea-lo?
+
 this_CRF_has_data_want_delete = Este CRF tem dados. Est\u00e1 certo que quer delet\u00e1-lo?
 this_crf_has_data_remove = This CRF has data. Are you sure you want to remove it? All Notes & Discrepancies associated with this Event CRF will be automatically closed. The Event CRF status will be set to Removed/Invalid.
 this_crf_has_data_restore = Este CRF tem dados. Est\u00e1 certo que quer restaur\u00e1-lo?
@@ -2425,7 +2425,7 @@ value_type = Value Type
 old = Old
 complete_audit_log_for = Complete Audit Logs for
 delete_date = Delete Date
-sure_to_exit = Are you sure you want to Exit? Select the OK button if you would like to Exit the transaction. Select the Cancel button if you would like to remain on the page.
+sure_to_exit = De certeza que deseja sair? Por favor selecione OK se deseja sair da p\u00E1gina. Selecione o CANCELAR se deseja continuar na p\u00E1gina.
 
 
 crf_notes = Discrepancy Notes
@@ -2437,7 +2437,7 @@ password_required = Password Required
 download_discrepancy_notes = Download discrepancy notes for all events (filtered for status or type)
 Filter_by_note_type = Filter by note type
 Filter_by_status = Filter by status
-openclinica_CRF_catalog = OpenClinica CRF Library
+openclinica_CRF_catalog = LibreClinica CRF Library
 download_all_discrepancy_notes = Download discrepancy notes for all subjects
 submit_notes = Submit Discrepancy Notes
 crf_oid = CRF_OID
@@ -2453,9 +2453,9 @@ rule_import_rule = Import Rule Assignments
 rule_expression = Expression
 rule_name = Rule Name
 rule_execute_on = Execute On
-rule_actions = Actions
+rule_actions = A\u00e7\u00f5es
 rule_action_summary = Action Summary
-rule_status = Status
+rule_status = Estado
 rule_ref_oid = RuleRef OID
 rule_result = Rule Result
 rule_crf_version = CRF Version
@@ -2539,7 +2539,7 @@ show_event_notes = Show events and discrepancy notes
 hide_event_notes = Hide events and discrepancy notes
 there_are_no_rows_because_no_events = There are not yet any events and/or CRFs.
 List_of_Notes_Discrepancies = List of Notes and Discrepancies
-signed = signed
+signed = assinado
 
 date_time_of_server = Date/Time of Server
 
@@ -2575,7 +2575,7 @@ create_site_properties = Create Site Properties
 set_study_status = Set Study Status
 
 
-nav_change_study_site = Outra escola
+nav_change_study_site = Outra Estudo
 nav_log_out = Sair
 nav_home = Home
 nav_subject_matrix = Insira dados
@@ -2616,7 +2616,7 @@ design = Design
 forced_reason_for_change = Forced Reason For Change in Administrative Editing?
 table_filter_instructions = Enter filter criteria below :
 table_apply_filter = Aplicar filtro
-table_clear_filter = Remover filter
+table_clear_filter = Remover filtro
 table_sdv_select = Select:
 table_sdv_all = All Shown
 table_sdv_none = None
@@ -2759,7 +2759,7 @@ crf_more_info = Click the arrow to the right for more info\t
 tooltip_title1 = Notas e discrep\u00E2ncias
 tooltip_name_title = Interviewer Name
 tooltip_date_title = Interviewer Date
-footNote = Click to add a discrepancy note\t
+footNote = Clique para adicionar uma nota de discrep\u00E2ncia\t
 footNote_threads = Click to view or reply.
 foot_threads = thread(s).
 days_since_updated = Days Since Updated
@@ -2768,7 +2768,7 @@ days_open = Days Open
 email_assigned_user = Email Assigned User
 assign_to_user = Assign to User
 submit_exit = Submit & Exit
-submit_close = Submit & Close
+submit_close = Submeter e Fechar
 add_note = Add Note
 
 Audit_History = Audit History
@@ -2788,7 +2788,7 @@ rule_go_back_to_Manage_rules = Go Back to Manage Rules
 rule_if_you_remove_this_all = You are removing all rules currently associated with this item. The rules can be restored later by a Data Manager or Study Director. Are you sure you want to do this?
 rule_target_oid = Target OID
 rule_variables = Specify Variables
-browser_locale = OpenClinica is currently being displayed in the\t
+browser_locale = LibreClinica is currently being displayed in the\t
 
 select_all_items_in_study = Selecionar todos os itens no estudo
 
@@ -2799,19 +2799,19 @@ assign_study_user_note = Note\: If you wish to assign users to a site you must f
 that_study = logged into that study.
 
 that_site = logged into that site.
-
+footer.license.1 = &copy; 2004-2013 OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a>
 view_within_crf = View within record
-
+footer.license.2 = <a target="_blank" href="http://www.openclinica.org/OpenClinica/3.0/license">Licensed under LGPLv2.1</a>. The program is free software; you can redistribute it and/or modify it under the
 rule_designer = Rule Designer
-
+footer.license.3 = terms of the GNU Lesser General Public License version 2.1 as published by the Free Software Foundation.
 language = language.
+footer.edition.1 = Unsupported
 
-
+footer.edition.2 = Community Edition
 scheduled_export_data_jobs = Scheduled Export Data Jobs
-
+footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM), and Akaza Research(R)<br/> are trademarks of Akaza Research LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of Akaza Research LLC, and is not certified, approved,<br/>or sponsored by Akaza Research LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other Akaza products.
 view_currently_executing_data_export_jobs = View Currently Executing Data Export Jobs
 currently_executing_data_export_jobs = Currently Executing Data Export Jobs
-
 run_on_colon = Run On:
 IDE_comma = InitialDataEntry,
 DDE_comma = DoubleDataEntry,
@@ -2836,7 +2836,7 @@ reassign_crf_version = Reassign CRF to a New Version
 
 
 404_error_msg_header = 404: Page not found
-404_error_msg_body = <P>Sorry, but the page you are looking for has not been found. Please use the menu options in the navigation bar above to navigate to where you want to go. If you continue to get this error, please click the 'Report Issue' in the navigation bar above and let us know how you are getting to this page.<P>Thank you! <P>The OpenClinica Development Team
+404_error_msg_body = <P>Sorry, but the page you are looking for has not been found. Please use the menu options in the navigation bar above to navigate to where you want to go. If you continue to get this error, please click the 'Report Issue' in the navigation bar above and let us know how you are getting to this page.<P>Thank you! <P>The LibreClinica Development Team
 
 choose_CRF_version = Reassign CRF to a New Version
 
@@ -2895,7 +2895,7 @@ listLdapUsers.list.table.header.username.label = Username
 listLdapUsers.list.table.header.firstName.label = First name
 listLdapUsers.list.table.header.lastName.label = Last name
 listLdapUsers.list.table.header.email.label = Email
-listLdapUsers.list.table.header.actions.label = Actions
+listLdapUsers.list.table.header.actions.label = A\u00e7\u00f5es
 listLdapUsers.list.table.selectUser.tooltip = Select this user
 listLdapUsers.list.table.emptyResults.label = No results found
 listLdapUsers.close.label = Close
@@ -2910,7 +2910,7 @@ login.requestPassword.retrieveLdapPassword = LDAP users, recover your password h
 
 
 403_error_msg_header = 403: Permission Denied
-403_error_msg_body = <P>Sorry, but you do not have access to the page you are looking for, please contact your administrator for the access .<P>Thank you! <P>The OpenClinica Development Team
+403_error_msg_body = <P>Sorry, but you do not have access to the page you are looking for, please contact your administrator for the access .<P>Thank you! <P>The LibreClinica Development Team
 
 
 time_and_events = Time and Events
