--- a/i18n/words_ru.properties
+++ b/i18n/words_ru.properties
@@ -146,7 +146,7 @@ Role_of_Access_Requested_Pending_Approval = \u0417\u0430\u043F\u0440\u043E\u0441
 SDV_complete = \u0412\u0435\u0440\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044F \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
 
 SDV_requirement = \u0422\u0440\u0435\u0431\u043E\u0432\u0430\u043D\u0438\u044F \u0432\u0435\u0440\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u0438
-
+Version_release = Version: 3.1.4.1-Community
 SDV_status = \u0421\u0442\u0430\u0442\u0443\u0441 \u0432\u0435\u0440\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u0438
 
 SE = \u0412\u0438\u0437\u0438\u0442/\u0441\u043E\u0431\u044B\u0442\u0438\u0435
@@ -170,7 +170,7 @@ UNK = UNK
 URL_description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 URL\:
 
 URL_reference = URL \u0441\u0441\u044B\u043B\u043A\u0430
-Version_release = Version: 3.1.4.1-Community
+
 YOB = YOB\: \u0413\u0413\u0413\u0413
 
 Years = \u041B\u0435\u0442
@@ -212,11 +212,11 @@ add_discrepancy_note = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0437\u
 
 add_new = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0435
 
-add_new_event = \u002A
+add_new_event = \u0020
 
 add_new_study_event_for = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u0432\u0438\u0437\u0438\u0442/\u0441\u043E\u0431\u044B\u0442\u0438\u0435 \u0434\u043B\u044F
 
-add_new_subject = \u002A
+add_new_subject = \u0020
 
 add_or_remove_items = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0438\u043B\u0438 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435
 
@@ -227,7 +227,7 @@ added_filter = \u0414\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u043D\u044B\u043
 administer_studies = \u0423\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F\u043C\u0438
 
 administer_study = \u0423\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435\u043C
-
+all_data_associated_with_the_CRF_in_this_event = \u0412\u0441\u0435 \u0434\u0430\u043D\u043D\u044B\u0435, \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0441 \u044D\u0442\u043E\u0439 \u0444\u043E\u0440\u043C\u043E\u0439 \u0432 \u044D\u0442\u043E\u043C \u0432\u0438\u0437\u0438\u0442\u0435/\u0441\u043E\u0431\u044B\u0442\u0438\u0438 \u0431\u0443\u0434\u0443\u0442 \u0443\u0434\u0430\u043B\u0435\u043D\u044B.
 administer_subjects = \u0423\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043F\u0430\u0446\u0438\u0435\u043D\u0442\u0430\u043C\u0438
 
 administer_users = \u0423\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\u043C\u0438
@@ -250,9 +250,9 @@ alerts_messages = \u041E\u043F\u043E\u0432\u0435\u0449\u0435\u043D\u0438\u044F
 
 all = \u0412\u0441\u0435
 
-all_data_associated_with_the_CRF_in_this_event = \u0412\u0441\u0435 \u0434\u0430\u043D\u043D\u044B\u0435, \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0441 \u044D\u0442\u043E\u0439 \u0444\u043E\u0440\u043C\u043E\u0439 \u0432 \u044D\u0442\u043E\u043C \u0432\u0438\u0437\u0438\u0442\u0435/\u0441\u043E\u0431\u044B\u0442\u0438\u0438 \u0431\u0443\u0434\u0443\u0442 \u0443\u0434\u0430\u043B\u0435\u043D\u044B.
 all_data_associated_with_the_CRF_in_this_event_will_be_removed = Data in removed Event CRFs are retained and viewable on the form, but not included in any extracted data sets. The removed Event CRF can be restored at any time. All Notes & Discrepancies associated with this Event CRF will be automatically closed.
 all_data_associated_with_the_CRF_in_this_event_will_be_restored = All data associated with the CRF in this Event will be restored.
+
 all_events = \u0412\u0441\u0435 \u0432\u0438\u0437\u0438\u0442\u044B/\u0441\u043E\u0431\u044B\u0442\u0438\u044F
 
 all_fields_are_required = \u0412\u0441\u0435 \u043F\u043E\u043B\u044F \u043E\u0431\u044F\u0437\u0430\u0442\u0435\u043B\u044C\u043D\u044B \u0434\u043B\u044F \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F.
@@ -383,7 +383,7 @@ cdisc_odm = CDISC ODM 1.2
 
 change_password = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
 
-change_study = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435
+change_study = \u043C\u0435\u043D\u044F\u0442\u044C
 
 change_user_profile = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043F\u0440\u043E\u0444\u0430\u0439\u043B \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 
@@ -469,7 +469,7 @@ confirm_and_submit_study = C\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u04
 
 confirm_changes = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
 
-confirm_changing_study = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+confirm_changing_study = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C
 
 confirm_dataset_properties = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u0441\u0432\u043E\u0439\u0441\u0442\u0432\u0430 \u043D\u0430\u0431\u043E\u0440\u0430 \u0434\u0430\u043D\u043D\u044B\u0445
 
@@ -1056,17 +1056,17 @@ go_back_to_CRF_list = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u0
 go_back_to_definition_list = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u0441\u043E\u0431\u044B\u0442\u0438\u0439
 
 go_back_to_site_list = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u0446\u0435\u043D\u0442\u0440\u043E\u0432
-footer.edition.1 = Unsupported
+
 go_back_to_study_list = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u0446\u0435\u043D\u0442\u0440\u043E\u0432
-footer.edition.2 = OpenClinica Community
+
 go_back_to_study_subject_list = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u043F\u0430\u0446\u0438\u0435\u043D\u0442\u043E\u0432 \u0432 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0438.
-footer.license.1 = &copy; 2004-2013 OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a>
+
 go_back_to_subject_list = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u043F\u0430\u0446\u0438\u0435\u043D\u0442\u043E\u0432.
-footer.license.2 = is provided AS IS, without warranty. Licensed under LGPLv2.1, you can redistribute it and/or modify it under the terms of the
-footer.license.3 = <a target="_blank" href="http://www.openclinica.com/gnu-lgpl-open-source-license">GNU Lesser General Public License</a> version 2.1 as published by the Free Software Foundation. OpenClinica is a <a target="_blank" href="http://www.openclinica.com/trademark">trademark</a> of OpenClinica, LLC.
+
 go_back_to_user_list = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u043A \u0441\u043F\u0438\u0441\u043A\u0443 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439.
-footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM) are trademarks of OpenClinica LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of OpenClinica LLC, and is not certified, approved,<br/>or sponsored by OpenClinica LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other OpenClinica products.
+
 go_back_to_view_subject = \u0412\u0435\u0440\u043D\u0443\u0442\u044C\u0441\u044F \u043A \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0443 \u043F\u0430\u0446\u0438\u0435\u043D\u0442\u0430.
+
 greater_than = \u0431\u043E\u043B\u044C\u0448\u0435 \u0447\u0435\u043C
 
 greater_than_or_equal = \u0431\u043E\u043B\u044C\u0448\u0435 \u0447\u0435\u043C \u0438\u043B\u0438 \u0440\u0430\u0432\u043D\u043E
@@ -2065,7 +2065,7 @@ task = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 technical_administrator = \u0422\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u0438\u0439 \u0430\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
 
 template = \u0448\u0430\u0431\u043B\u043E\u043D
-
+this_crf_has_data = This CRF has data. Are you sure you want to remove it?
 test_rule = \u041F\u0440\u0430\u0432\u0438\u043B\u0430
 
 test_rule_default_result = Please provide a target and a rule and then press Submit
@@ -2115,7 +2115,7 @@ there_are_no_CRF = There are no CRFs in this study event.
 there_are_no_sections = There are no sections in this Event CRF.
 
 there_are_not_sections_in_this_CRF = There are no sections in this CRF Version.
-this_crf_has_data = This CRF has data. Are you sure you want to remove it?
+
 this_CRF_has_data_want_delete = This CRF has data. Are you sure you want to delete it?
 this_crf_has_data_remove = This CRF has data. Are you sure you want to remove it? All Notes & Discrepancies associated with this Event CRF will be automatically closed. The Event CRF status will be set to Removed/Invalid.
 this_crf_has_data_restore = This CRF has data. Are you sure you want to restore it?
@@ -2799,19 +2799,19 @@ assign_study_user_note = \u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\
 that_study = \u0412\u043E\u0439\u0442\u0438 \u0432 \u0434\u0430\u043D\u043D\u043E\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435.
 
 that_site = \u0412\u043E\u0439\u0442\u0438 \u0432 \u0434\u0430\u043D\u043D\u044B\u0439 \u0446\u0435\u043D\u0442\u0440.
-
+footer.license.1 = &copy; 2004-2013 OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a>
 view_within_crf = \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u044C
-
+footer.license.2 = is provided AS IS, without warranty. Licensed under LGPLv2.1, you can redistribute it and/or modify it under the terms of the
 rule_designer = \u0414\u0438\u0437\u0430\u0439\u043D\u0435\u0440 \u043F\u0440\u0430\u0432\u0438\u043B
-
+footer.license.3 = <a target="_blank" href="http://www.openclinica.com/gnu-lgpl-open-source-license">GNU Lesser General Public License</a> version 2.1 as published by the Free Software Foundation. OpenClinica is a <a target="_blank" href="http://www.openclinica.com/trademark">trademark</a> of OpenClinica, LLC.
 language = \u044F\u0437\u044B\u043A\u0435
+footer.edition.1 = Unsupported
 
-
+footer.edition.2 = OpenClinica Community
 scheduled_export_data_jobs = Scheduled Export Data Jobs
-
+footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM) are trademarks of OpenClinica LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of OpenClinica LLC, and is not certified, approved,<br/>or sponsored by OpenClinica LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other OpenClinica products.
 view_currently_executing_data_export_jobs = View Currently Executing Data Export Jobs
 currently_executing_data_export_jobs = Currently Executing Data Export Jobs
-
 run_on_colon = \u0417\u0430\u043F\u0443\u0441\u0442\u0438\u0442\u044C\:
 IDE_comma = InitialDataEntry,
 DDE_comma = \u0414\u0432\u043E\u0439\u043D\u043E\u0439\u0412\u0432\u043E\u0434\u0414\u0430\u043D\u043D\u044B\u0445,
