--- a/i18n/workflow_en.properties
+++ b/i18n/workflow_en.properties
@@ -33,7 +33,7 @@ change_current_study = Change Current Study
 
 change_study = Change Study
 
-change_study_site = Change Study/Site
+change_study_site = Change School
 
 check_version = Check Version
 
