--- a/i18n/workflow_et.properties
+++ b/i18n/workflow_et.properties
@@ -1,17 +1,17 @@
 
 
-Specify_criteria = Specificeer Criteria
+Specify_criteria = Specify Criteria
 
 
-add_new_study_event = Voeg nieuw bezoek toe
+add_new_study_event = Add New Study Event
 
-add_new_subject = \u0020
+add_new_subject = \u002A
 
-add_subject = Deelnemer toevoegen
+add_subject = Add Subject
 
-administer_CRFs = CRF's beheren
+administer_CRFs = Administer CRFs
 
-administer_CRFs2 = Case Report Forms (CRF's) beheren
+administer_CRFs2 = Administer Case Report Forms (CRFs)
 
 administer_studies = Administer Studies
 
@@ -19,9 +19,9 @@ administer_subjects = Administer Subjects
 
 administer_system = Administer System
 
-administer_users = Gebruiikers beheren
+administer_users = Administer Users
 
-assign_new_users_to_study = Nieuwe gebruikers aan Studie toewijzen
+assign_new_users_to_study = Assign New Users to Study
 
 assign_subject_to_group = Assign Subject to Group
 
@@ -31,39 +31,39 @@ business_administrator = Business Administrator
 
 change_current_study = Change Current Study
 
-change_study = Ga naar een andere school
+change_study = Vaheta uuringut
 
-change_study_site = Ga naar een andere school
+change_study_site = Vaheta kooli
 
 check_version = Check Version
 
 conditions_and_eligibility = Conditions and Eligibility
 
-confirm_and_submit = Bevestigen en versturen
+confirm_and_submit = Confirm and Submit
 
 confirm_dataset_properties = Confirm Dataset Properties
 
-confirm_user_account_details = Bevestig gegevens Gebruiker
+confirm_user_account_details = Confirm User Account Details
 
-create_CRF_version = Maak een nieuwe versie van CRF
+create_CRF_version = Create a CRF Version for
 
-create_a_new_CRF = Een nieuw CRF maken
+create_a_new_CRF = Create a New CRF
 
-create_a_new_CRF_case_report_form = Upload een nieuw CRF
+create_a_new_CRF_case_report_form = Create a New Case Report Form (CRF)
 
-create_a_new_study_event_definition = \u0020
+create_a_new_study_event_definition = \u002A
 
-create_dataset_instructions = Instructies voor het maken van een dataset
+create_dataset_instructions = Create Dataset Instructions
 
-create_new_site = Een nieuw centrum maken
+create_new_site = Create New Site
 
-create_study_event_definition = Een studie-bezoek maken
+create_study_event_definition = Create Study Event Definition
 
-create_subject_group_class = Maak een klasse bij een deelnemer-groep
+create_subject_group_class = Create Subject Group Class
 
-create_user_account = Nieuwe gebruiker maken
+create_user_account = Create User Account
 
-data_entry = Gegevens invoeren
+data_entry = Data Entry
 
 define_temporal_scope = Define Temporal Scope
 
@@ -81,13 +81,13 @@ edit_filter = Edit Filter
 
 edit_user_account = Edit User Account
 
-edit_user_role = Wijzig Gebruikersrol
+edit_user_role = Edit User Role
 
 enroll_subject = Enroll Subject
 
 enroll_subject_instructions = Enroll Subject Instructions
 
-enter_version_name = Geef de naam van deze versie
+enter_version_name = Enter Version Name
 
 event_CRF = Event CRF
 
@@ -103,21 +103,21 @@ facility_information = Facility Information
 
 generate_dataset = Generate Dataset
 
-home = Start
+home = Home
 
 import_data = Import Data
 
-instructions = Instructies
+instructions = Instructions
 
 lock_event_definition = Lock Event Definition
 
-manage_CRFs = CRF's beheren
+manage_CRFs = Manage CRFs
 
-manage_CRFs2 = Case Report Forms (CRF's) beheren
+manage_CRFs2 = Manage Case Report Forms (CRFs)
 
 manage_definitions = Manage Definitions
 
-manage_discrepancies = Discrepanties beheren
+manage_discrepancies = Manage Discrepancies
 
 manage_event_definitions = Manage Event Definitions
 
@@ -133,29 +133,29 @@ manage_study_event_definitions = Manage Study Event Definitions
 
 manage_subjects = Manage Subjects
 
-manage_users = Gebruikers beheren
+manage_users = Manage Users
 
-mark_event_CRF_complete = Invoer markeren als afgerond
+mark_event_CRF_complete = Mark Event CRF Complete
 
 openclinica_enterprise = OpenClinica Enterprise
 
-overview = Overzicht
+overview = Overview
 
 reassign_study_subject = Reassign Study Subject
 
 related_information = Related Information
 
-remove_CRF = Verwijder een CRF
+remove_CRF = Remove CRF
 
-remove_a_site = Verwijder een centrum
+remove_a_site = Remove a Site
 
-remove_a_study = Verwijder een Studie
+remove_a_study = Remove a Study
 
-remove_event_definition = Studiebezoek verwijderen
+remove_event_definition = Remove Event Definition
 
-remove_subject = Verwijder Deelnemer
+remove_subject = Remove Subject
 
-remove_user_role = Verwijder Gebruikersrol
+remove_user_role = Remove User Role
 
 request_study_access = Request Study Access
 
@@ -167,7 +167,7 @@ restore_a_site = Restore a Site
 
 restore_a_study = Restore a Study
 
-restore_event_definition = Studiebezoek terugzetten
+restore_event_definition = Restore Event Definition
 
 restore_subject = Restore Subject
 
@@ -175,47 +175,47 @@ review_SQL_generated = Review SQL Generated
 
 review_new_items = Review New Items
 
-select_CRF = Kies CRF
+select_CRF = Select CRF
 
-select_items_event = Kies items of bezoek/deelnemer attributen
+select_items_event = Select Items or Event/Subject Attributes
 
-select_parameters = Kies parameters
+select_parameters = Select Parameters
 
-select_section = Kies sectie
+select_section = Select Section
 
-set_user_role = Ken gebruikersrol toe
+set_user_role = Set User Role
 
-specify_dataset_properties = Specificeer de eigenschappen van de dataset
+specify_dataset_properties = Specify Dataset Properties
 
-study_description = Studie omschrijving
+study_description = Study Description
 
-study_design = Studie ontwerp
+study_design = Study Design
 
-study_event = Bezoek
+study_event = Study Event
 
-study_event_definitions = Studiebezoeken
+study_event_definitions = Study Events Definitions
 
-study_event_overview = Samenvatting bezoek
+study_event_overview = Study Event Overview
 
-study_status = Studie status
+study_status = Study Status
 
 subjects = Subjects
 
-submit_data = Data invoeren
+submit_data = Submit Data
 
-submit_data_sets = Datasets opslaan
+submit_data_sets = Submit Data Sets
 
-technical_admin = Technische administrator
+technical_admin = Technical Admin
 
-technical_administrator = Technische administrator
+technical_administrator = Technical Administrator
 
-unlock_event_definition = Ontgrendel studiebezoek
+unlock_event_definition = Unlock Event Definition
 
 update_CRF = Update CRF
 
 update_profile = Update Profile
 
-update_study_event = Wijzig studiebezoek
+update_study_event = Update Study Event
 
 update_study_event_definition = Update Study Event Definition
 
@@ -251,9 +251,9 @@ view_event_CRF_data = View Event CRF Data
 
 view_event_CRF_properties = View Event CRF Properties
 
-view_event_definition = Bekijk studiebezoek
+view_event_definition = View Event Definition
 
-view_events = Bezoeken
+view_events = View Events
 
 view_filters = View Filters
 
@@ -261,9 +261,9 @@ view_site = View Site
 
 view_site_details = View Site Details
 
-view_study_details = Study details bekijken
+view_study_details = View Study Details
 
-view_study_events = Bekijk studiebezoeken
+view_study_events = View Study Events
 
 view_study_subject = View Study Subject
 
@@ -278,7 +278,7 @@ import_crf_data = Import CRF Data
 
 import_rule_data = Import Rule Data
 manage_rule = Manage Rules
-notes_discrepancies = Notities & Discrepanties
+notes_discrepancies = Notes & Discrepancies
 
 import_rules_1 = Import Rule XML
 import_rules_2 = Validate Rules
@@ -289,7 +289,7 @@ rule_manage_rule_assignment = Manage Rules for
 rule_manage_assignment = Manage Rule Assignments
 rule_manage = Manage Rules
 rule_import = Import Rules
-rule_test = Test Regels
+rule_test = Test Rules
 test_rules_get_results = Step 3: Verify results
 test_rules_test = Step 2: Specify test values for variables in your rule expression
 test_rules_validate = Step 1: Specify target , rule target & action evaluation value
