--- a/i18n/workflow_pt.properties
+++ b/i18n/workflow_pt.properties
@@ -31,9 +31,9 @@ business_administrator = Administrador de neg\u00f3cios
 
 change_current_study = Mudar Estudo atual
 
-change_study = Outra escola
+change_study = Mudar Estudo
 
-change_study_site = Outra escola
+change_study_site = Mudar Estudo
 
 check_version = Checar vers\u00e3o
 
