--- a/i18n/exceptions_pt.properties
+++ b/i18n/exceptions_pt.properties
@@ -370,7 +370,7 @@ either_no_data_for_crf_or_data_entry_not_started = Either data entry is not star
 field_no_spaces_allowed = Submission URL should not contain spaces.
 field_submission_url_not_unique = This URL is already in use for this study.
 
-may_not_create_xforms = Xform CRFs are not allowed on this OpenClinica instance.
+may_not_create_xforms = Xform CRFs are not allowed on this LibreClinica instance.
 
 field_no_leading_or_trailing_spaces = This field cannot contain leading or trailing spaces.
 study_subject_id_can_not_contain_html_lessthan_or_greaterthan_elements = Study Subject ID can not contain html '<' or '>' elements.
