--- a/i18n/licensing_en.properties
+++ b/i18n/licensing_en.properties
@@ -1,10 +1,10 @@
 
 
-Version_release = Version: 3.14 - Changeset: 425de43caf8e 2018-01-18 22:03 +0000
+Version_release = Version: 1.1.0 - Changeset: 7ab59c39e732 2021-10-18 11:02 -0400
 
-footer.license.1 = &copy; OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a>
+footer.license.1 = &copy; LibreClinica and collaborators. The LibreClinica <a target="_blank" href="http://www.libreclinica.org">software for clinical research</a>
 footer.license.2 = is provided AS IS, without warranty. Licensed under LGPLv2.1, you can redistribute it and/or modify it under the terms of the
-footer.license.3 = <a target="_blank" href="http://www.openclinica.com/gnu-lgpl-open-source-license">GNU Lesser General Public License</a> version 2.1 as published by the Free Software Foundation. OpenClinica is a <a target="_blank" href="http://www.openclinica.com/trademark">trademark</a> of OpenClinica, LLC.
+footer.license.3 = <a target="_blank" href="http://www.gnu.org/licenses/lgpl-3.0.html">GNU Lesser General Public License</a> version 3.0 as published by the Free Software Foundation. LibreClinica is a filed trademark of ReliaTec GmbH.
 footer.edition.1 = Unsupported
-footer.edition.2 = OpenClinica Community
-footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM)<br/> are trademarks of OpenClinica, LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of OpenClinica, LLC, and is not certified, approved,<br/>or sponsored by OpenClinica, LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other OpenClinica products.
+footer.edition.2 = LibreClinica
+footer.tooltip = LibreClinica<br/> is a filed trademark of ReliaTec GmbH.<br/><br/> The party providing this instance of LibreClinica is not a certified partner,<br/> reseller, or affiliate of ReliaTec, and is not certified, approved,<br/>or sponsored by ReliaTec in connection with installation, operation,<br/> maintenance or support of the LibreClinica software platform,<br/> or any other ReliaTec products.
