--- a/i18n/notes.properties
+++ b/i18n/notes.properties
@@ -73,11 +73,11 @@ change_your_current_study = Change Your Current Study
 
 choose_a_study_from_the_folling_study_list = Choose a study from the following study list and set a role for the user to access the study.
 
-#choose_browser = LibreClinica has been tested using Internet Explorer 7, \
-#  Internet Explorer 8, and Firefox versions greater than 3.5. Please use one of \
-#  these browsers to ensure the application functions correctly. \
-#  If you do not have one of these browsers installed you may need to contact your \
-#  IT support group for assistance.
+
+
+
+
+
 
 choose_browser = LibreClinica recommends using  the latest version of Chrome, Firefox or Internet Explorer. While LibreClinica is designed to work on all standards-compliant browsers, we have not verified that the application functions correctly on other browsers or browser versions. If you do not have one of the above browsers installed you may need to contact your IT support group for assistance.
 
@@ -113,9 +113,9 @@ confirm_dataset_properties = Please confirm the dataset properties below, or cli
 
 confirm_deleting_this_job = Please confirm that you are deleting this Job. This Job will be wiped from the system, and the delete cannot be undone.
 
-confirm_deletion_of_this_CRF=<p>Confirm DELETION of this CRF from Event {0} (Date {1}). All data associated with the CRF in this Event will be permanently deleted, and Notes & Discrepancies auto-closed. Please note that deleted Event CRF CANNOT be restored in the future.</p>
+confirm_deletion_of_this_CRF = <p>Confirm DELETION of this CRF from Event {0} (Date {1}). All data associated with the CRF in this Event will be permanently deleted, and Notes & Discrepancies auto-closed. Please note that deleted Event CRF CANNOT be restored in the future.</p>
 
-# pause, restore and delete jobs from the scheduler
+
 confirm_pausing_this_job = Please confirm that you are pausing this Job. This Job will remain in the database and can still be restored or deleted.
 
 confirm_reassign_study_subject = Confirm Reassign Study Subject
@@ -180,7 +180,7 @@ defining_CRF_elements_layout = defining the CRF's data elements and layout.
 
 description = LibreClinica: Managing Clinical Research Studies
 
-#sdv
+
 design_implement_sdv = The main window allows you to implement Source Data Verification.
 
 design_implement_sdv_study_subject = The main window allows you to implement Source Data Verification. The table contains all Subjects in the Study whether or not they are available for Source Data Verification.
@@ -193,7 +193,7 @@ displaying_SE_for_the = Displaying Study Events for the
 
 displaying_with_SE = Displaying {0}s with Study Events in this Study:
 
-download.data.to.discrepancy.notes  = To view or download all of the discrepancy notes for this study or site, please click
+download.data.to.discrepancy.notes = To view or download all of the discrepancy notes for this study or site, please click
 
 download_CRF_excel = Download a blank CRF Excel spreadsheet
 
@@ -205,7 +205,7 @@ enter_data_in_the_form = Please enter data in the form provided. To exit this fo
 
 enter_dataset_properties_be_descriptive = Please enter the dataset properties in the fields. Be descriptive.
 
-# View Data Entry
+
 enter_note_for_item = Click the flag icon next to an input to enter/view discrepancy notes. Please note that you can only save the notes if CRF data entry has already started.
 
 entering_data_interviewer_name_required = When Performing Data Entry, Interviewer Name Required?
@@ -220,7 +220,7 @@ event_not_created_in_database = The study event could not be created in the data
 
 event_type_already_exists = and an event of this type already exists for the specified subject.
 
-events_month_shown_default=You can use this page to filter Study Events. The default view shows Study Events that apply to the current month.
+events_month_shown_default = You can use this page to filter Study Events. The default view shows Study Events that apply to the current month.
 
 example_CRF = Example CRF
 
@@ -229,14 +229,14 @@ exit_without_saving = Exit w/o Saving
 expand_collapse = Click on the section title to expand or collapse it.
 
 expand_each_section = <p style="width:600px; font-size:18px; line-height:24px">You must expand each section and fill out the required fields.  If you do not fill out the required fields in each section, your data will not be saved and you will have to edit the study again.</p>
-
+export_dataset_download3 = If you continue to have trouble, please see Help
 
 export_dataset_download1 = To view or download data, select from the formats provided below. You may also select from the archived dataset files at the bottom of the page.
 
 export_dataset_download2 = Large extracts may take some time to run. Once complete, you will receive an email notification and you can download your extract in the table below.
 
+export_dataset_download6 = for additional tips on configuring your browser.
 export_dataset_download4 = If you are having trouble downloading files over an https connection, see Help
-
 export_dataset_download5 = for information on modifying your settings to enable https file downloads.
 
 extract_dataset_side_info1 = Datasets aggregate subject data from your study into a single file. For the current study/site you may download data from previously created datasets or create your own dataset.
@@ -307,10 +307,10 @@ if_you_restore_this_CRF = If you restore this CRF, all the assigned uses of the 
 
 if_you_restore_this_CRF_version = If you Restore this CRF Version, all the assigned uses of the CRF Version and any data entered using it will be Restored as well. Are you sure you want to restore it?
 
-# Import CRF data
+
 import_instructions = Upload an XML file that contains CRF data.  If your CRF has calculated value fields, you will have to go in and save each section.  LibreClinica only calculates values on a manual save.
 
-# Import Rule data
+
 import_rule_instructions = Upload an XML file that contains Rule data.
 
 import_rule_side_bar_instructions = Batch upload Rule data to LibreClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
@@ -424,13 +424,13 @@ openclinica_enterprise_is_an_enhaced_version = <P>OpenClinica Enterprise is an e
 
 openclinica_excel_support = LibreClinica is tested and supported with the use of Microsoft Excel 97-2003. If you are using a more recent version of Excel, please use the options to "save as 97-2003 version".
 
-LibreClinica does not support the use CRFs created with OpenOffice. \r\n
+
 
 openclinica_org_user_account_required = (LibreClinica.org user account required).
 
 openclinica_system_administrator = LibreClinica System Administrator
 
-or_your_can_change_the_version_name  = Or you can change the version name and upload a different version of the CRF.
+or_your_can_change_the_version_name = Or you can change the version name and upload a different version of the CRF.
 
 owner_of_CRF_CRF_version = If you are the owner of a CRF version, and the CRF version
 
@@ -629,7 +629,7 @@ there_are_not_with_SE = There are no {0}s with Study Events in this Study.
 
 there_were_several_invalid_fields = There were several invalid fields in your spreadsheet. Please take a look at the data below,
 
-this_CRF_has_data_want_delete =This CRF has data. Are you sure you want to delete it? All Notes & Discrepancies associated with this Event CRF will be automatically closed. The Event CRF status will revert to Data Entry Started.
+this_CRF_has_data_want_delete = This CRF has data. Are you sure you want to delete it? All Notes & Discrepancies associated with this Event CRF will be automatically closed. The Event CRF status will revert to Data Entry Started.
 this_email_is_from_openclinica_admin = This email is from LibreClinica admin.
 
 this_section_allows_a_study_manager_to_view_and_resolve = The table lists discrepancy notes that have been created for a given study/site and by default displays the <b>oldest items first.</b> Sort or filter using the column headers. To view or update the note, please select the "View" or "View within record" action icons..
@@ -674,7 +674,7 @@ want_exit_without_saving = are you sure you want to exit without saving?
 
 welcome = Welcome to LibreClinica,
 
-welcome_to = Welcome to
+
 
 with_a_role_of = with a role of
 
@@ -698,13 +698,13 @@ you_choose_to_remove_the_following_subject = you choose to remove the following 
 
 you_choose_to_restore_the_following_CRF = You choose to restore the following CRF
 
-you_choose_to_restore_the_following_study = You choose to restore the following study
+
 
 your_account_has_been_restored_and_password_reset = Your account on the LibreClinica system has been restored, and your password has been reset.  Your login information follows
-your_openclinica_account_password_reset = Your LibreClinica account password has been reset
-your_openclinica_password = your LibreClinica password
-your_password_has_been_reset_as = Your password has been reset as
-your_password_has_been_reset_on_openclinica = Your password has been reset on the LibreClinica system.  Your login information follows
+
+
+
+
 
 
 you_choose_to_restore_the_following_study = You choose to restore the following study
@@ -730,28 +730,28 @@ your_openclinica_password = your LibreClinica password
 
 the_study_site_status_is = The study/site status is
 welcome_to = Welcome to
-notes_assigned_to_me= Notes & Discrepancies Assigned to Me:\t
+notes_assigned_to_me = Notes & Discrepancies Assigned to Me:\t
 
 your_password_has_been_reset_as = Your password has been reset as
 
 your_password_has_been_reset_on_openclinica = Your password has been reset on the LibreClinica system.  Your login information follows
 
-html_output=Extract to HTML
-html_output_link=Click here
-html_helptext=Extracting to an HTML file for printing to hard copy
-pdf_output=Extract to PDF
-pdf_output_link=Click here for PDF output
-pdf_helptext=Extracting to a PDF file for printing to hard copy
-extract_instructions=You have just run an Extract Data job on the system.  You can feel free to work on other things while the job runs, and LibreClinica will alert you when the job is finished.
-extract_is_running=Your extract is running. You will receive an email and message when the extract is complete.
-back_to_datasets=Back to View All Datasets
-back_to_dataset=Back to Dataset
+html_output = Extract to HTML
+html_output_link = Click here
+html_helptext = Extracting to an HTML file for printing to hard copy
+pdf_output = Extract to PDF
+pdf_output_link = Click here for PDF output
+pdf_helptext = Extracting to a PDF file for printing to hard copy
+extract_instructions = You have just run an Extract Data job on the system.  You can feel free to work on other things while the job runs, and LibreClinica will alert you when the job is finished.
+extract_is_running = Your extract is running. You will receive an email and message when the extract is complete.
+back_to_datasets = Back to View All Datasets
+back_to_dataset = Back to Dataset
 
-failed_create_dn_mapping_for_dnId=Failed to create dn mapping for dn ID
-failed_create_child_dn_for_new_parent_dnId=Failed to create child dn for newly created parent dn ID
-failed_create_new_dn=Failed to create new discrepancy note in database
-a_new_child_dn_added=A new child note has been added successfully.
-a_new_dn_thread_added=A new thread has been created successfully.
+failed_create_dn_mapping_for_dnId = Failed to create dn mapping for dn ID
+failed_create_child_dn_for_new_parent_dnId = Failed to create child dn for newly created parent dn ID
+failed_create_new_dn = Failed to create new discrepancy note in database
+a_new_child_dn_added = A new child note has been added successfully.
+a_new_dn_thread_added = A new thread has been created successfully.
 respond_this_Discrepancy_Note = Respond below to Update/Resolve/Close this Discrepancy Note:
 download_study_meta = Download the study metadata
 opening_finished_may_save = Click to open in your browser, or right click (option click for Mac users) and select Save as to save the file to your computer.
@@ -760,8 +760,8 @@ not_changed_data = You have not changed any data in this CRF section.
 
 changed_not_saved = Data has been entered, but not saved.
 
-# View Currently Executing Data Export Jobs
- cancel_data_export_info = The table to the right allows you to Cancel data export processes that are currently running, or scheduled to run. If you Cancel the process, the data will not be exported and nothing will be available to download. If you Cancel a scheduled job process, it will be rescheduled based on the dates you provided when the scheduled job was created.
+
+cancel_data_export_info = The table to the right allows you to Cancel data export processes that are currently running, or scheduled to run. If you Cancel the process, the data will not be exported and nothing will be available to download. If you Cancel a scheduled job process, it will be rescheduled based on the dates you provided when the scheduled job was created.
 
 verify_import_rule_instructions = Please review the rules and rule assignments you have uploaded below.<br> Invalid rules and invalid rule assignments will have a corresponding error message indicating the error that needs to be resolved.<br> Rule updates and rule assignment updates will overwrite existing rules and rule assignments. <br> New rules and new rule assignments will be added.
 
