--- a/i18n/notes_et.properties
+++ b/i18n/notes_et.properties
@@ -69,7 +69,7 @@ cannot_create_event_because_no_subjects = You cannot create a study event in thi
 
 change_dataset_name_create_copy = (Changing the name of the dataset will create a copy.)
 
-change_your_current_study = Change school
+change_your_current_study = Vaheta kooli
 
 choose_a_study_from_the_folling_study_list = Choose a study from the following study list and set a role for the user to access the study.
 
@@ -81,7 +81,7 @@ choose_a_study_from_the_folling_study_list = Choose a study from the following s
 
 choose_browser = LibreClinica recommends using  the latest version of Chrome, Firefox or Internet Explorer. While LibreClinica is designed to work on all standards-compliant browsers, we have not verified that the application functions correctly on other browsers or browser versions. If you do not have one of the above browsers installed you may need to contact your IT support group for assistance.
 
-choosing_switch_to_study = You are choosing to switch to the study
+choosing_switch_to_study = Oled vahetamas uuringut. Uus uuring
 
 clear_search_keywords = Clear Search Keywords
 
@@ -146,7 +146,7 @@ crfchange_study_contact_sysadmin = No puede introducir datos en la Hoja CRD de e
 
 crfno_have_correct_privilege_current_study = no permission to perform data entry
 
-current_study_changed_succesfully = Your current active study has been changed successfully.
+current_study_changed_succesfully = Hetkel aktiivne uuring on edukalt muudetud.
 
 currently_in = (currently in)
 
@@ -206,7 +206,7 @@ enter_data_in_the_form = Please enter data in the form provided. To exit this fo
 enter_dataset_properties_be_descriptive = Please enter the dataset properties in the fields. Be descriptive.
 
 
-enter_note_for_item = Click the flag icon next to an input to enter/view discrepancy notes. Please note that you can only save the notes if CRF data entry has already started.
+enter_note_for_item = Vajuta lipu ikoonile, et sisestada/näha märkmeid. Pane tähele, et märkmeid saab salvestada, kui andmelehe sisestamisega on alustatud
 
 entering_data_interviewer_name_required = When Performing Data Entry, Interviewer Name Required?
 
@@ -323,7 +323,7 @@ in_order_to_enter_data_create_event = In order to enter data, you should create 
 
 indicate_subject_parent = Indicate the subject's parents, if applicable.
 
-info = Other Info
+info = Muu info
 
 instructions = Instructions
 
@@ -444,7 +444,7 @@ please_check_the_information_below_if_no_errors = Please check the information b
 
 please_choose_a_study_in_the_following_list2 = Please choose a study in the following list:
 
-please_choose_study_list = Please choose a study in the following list
+please_choose_study_list = Palun vali alljärgnevast nimekirjast uuring
 
 please_click_browse_button = Please click "Browse" button below to find the excel spreadsheet on your machine
 
@@ -668,7 +668,7 @@ view_current_study_details = View Current Study Details
 
 view_details_site_or_create = View details on each site or create a new one.
 
-view_subjects_in = \u0020
+view_subjects_in = Subject Matrix for
 
 want_exit_without_saving = are you sure you want to exit without saving?
 
@@ -717,7 +717,7 @@ you_will_be_required_to_change = You may be required to change this password the
 
 your_account_has_been_unlocked_and_password_reset = Your account on the LibreClinica system has been unlocked, and your password has been reset.  Your login information follows
 
-your_current_active_study_is = Your current active study is
+your_current_active_study_is = Hetkel aktiivne uuring on
 
 your_new_openclinica_account = Your New LibreClinica Account
 
@@ -729,8 +729,8 @@ your_openclinica_password = your LibreClinica password
 
 
 the_study_site_status_is = The study/site status is
-welcome_to = Welcome to
-notes_assigned_to_me = Notes & Discrepancies Assigned to Me:\t
+welcome_to = Tere tulemast
+notes_assigned_to_me = Mulle suunatud märkused & tähelepanekud:\t
 
 your_password_has_been_reset_as = Your password has been reset as
 
