--- a/i18n/notes_pt.properties
+++ b/i18n/notes_pt.properties
@@ -69,7 +69,7 @@ cannot_create_event_because_no_subjects = Voc\u00EA n\u00E3o pode criar um novo 
 
 change_dataset_name_create_copy = (Changing the name of the dataset will create a copy.)
 
-change_your_current_study = Outra escola
+change_your_current_study = Outra Estudo
 
 choose_a_study_from_the_folling_study_list = Selecione um Estudo da lista de Estudos a seguir e defina uma fun\u00E7\u00E3o para o usu\u00E1rio acessar o estudo.
 
@@ -79,9 +79,9 @@ choose_a_study_from_the_folling_study_list = Selecione um Estudo da lista de Est
 
 
 
-choose_browser = OpenClinica recommends using  the latest version of Chrome, Firefox or Internet Explorer. While OpenClinica is designed to work on all standards-compliant browsers, we have not verified that the application functions correctly on other browsers or browser versions. If you do not have one of the above browsers installed you may need to contact your IT support group for assistance.
+choose_browser = LibreClinica recommends using  the latest version of Chrome, Firefox or Internet Explorer. While LibreClinica is designed to work on all standards-compliant browsers, we have not verified that the application functions correctly on other browsers or browser versions. If you do not have one of the above browsers installed you may need to contact your IT support group for assistance.
 
-choosing_switch_to_study = Voc\u00EA est\u00E1 escolhendo mudar para o Estudo
+choosing_switch_to_study = Voc\u00EA est\u00E1 escolhendo mudar para
 
 clear_search_keywords = Limpar palavras-chave de busca
 
@@ -128,7 +128,7 @@ congratulations_spreadsheet = <b>Parab\u00E9ns!</b>  Sua planilha n\u00E3o gerou
 
 contact_openclinica_administrator = Contate o administrador do OpenClinica
 
-copy_dataset_by_change_name = If you change the dataset name, OpenClinica will create a copy of the dataset and the existing dataset will not be changed. If you do not change the name, the dataset will be updated.
+copy_dataset_by_change_name = If you change the dataset name, LibreClinica will create a copy of the dataset and the existing dataset will not be changed. If you do not change the name, the dataset will be updated.
 
 create_CRF_entering_name = Crie um novo CRF digitando o nome e descri\u00E7\u00E3o.
 
@@ -146,7 +146,7 @@ crfchange_study_contact_sysadmin = N\u00E3o \u00E9 poss\u00EDvel introduzir dado
 
 crfno_have_correct_privilege_current_study = sem permiss\u00E3o para realizar entrada de dados
 
-current_study_changed_succesfully = Seu Estudo ativo atual foi alterado com sucesso.
+current_study_changed_succesfully = Bem-vindo
 
 currently_in = (atualmente em)
 
@@ -206,7 +206,7 @@ enter_data_in_the_form = Favor entrar com dados do jeito fornecido. Para sair de
 enter_dataset_properties_be_descriptive = Favor entrar com as propriedades do conjunto de dados abaixo. Seja descritivo.
 
 
-enter_note_for_item = Click the flag icon next to an input to enter/view discrepancy notes. Please note that you can only save the notes if CRF data entry has already started.
+enter_note_for_item = Clique no \u00EDcone da bandeira ao lado da resposta para inserir/exibir a nota de discrep\u00E2ncia. S\u00F3 \u00E9 poss\u00EDvel salvar as notas se a entrada de dados do CRF j\u00E1 tiver sido iniciada.
 
 entering_data_interviewer_name_required = Requerer nome do Entrevistador quando digitar novos dados?
 
@@ -308,14 +308,14 @@ if_you_restore_this_CRF = Se voc\u00EA restaurar esse CRF, todos os usos associa
 if_you_restore_this_CRF_version = Se voc\u00EA restaurar essa vers\u00E3o do CRF, todos os usos associados a ele e quaisquer entradas de dados que utilizem-no ser\u00E3o restaurados tamb\u00E9m. Est\u00E0 certo de que deseja restaur\u00E1-los?
 
 
-import_instructions = Upload an XML file that contains CRF data.  If your CRF has calculated value fields, you will have to go in and save each section.  OpenClinica only calculates values on a manual save.
+import_instructions = Upload an XML file that contains CRF data.  If your CRF has calculated value fields, you will have to go in and save each section.  LibreClinica only calculates values on a manual save.
 
 
 import_rule_instructions = Upload an XML file that contains Rule data.
 
-import_rule_side_bar_instructions = Batch upload Rule data to OpenClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
+import_rule_side_bar_instructions = Batch upload Rule data to LibreClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
 
-import_side_bar_instructions = Batch upload CRF data to OpenClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
+import_side_bar_instructions = Batch upload CRF data to LibreClinica using an XML file. Upon successful validation of the data provided in the XML file, Openclinica will save this information.
 
 in_order_to_enter_data_create_e = In order to enter data create event
 
@@ -377,9 +377,9 @@ manage_all_subjects_in = Gerenciar todos os Pacientes em
 
 manage_all_users_in = Gerenciar todos os usu\u00E0rios em
 
-manage_execute_rule_assignments = This page allows you to view and manage your study rules. OpenClinica rules provide edit check, email action and other capabilities during the course of data capture and in batch mode.<br><br> You may click on the action icons to view, test, execute and manage these rules. By default the table is filtered by Rule Status (Available) and sorted by Item Name. Use the column headers and filter fields (gray boxes) to sort and filter, or filter by Event CRF by using the tree in the 'Info' panel below
+manage_execute_rule_assignments = This page allows you to view and manage your study rules. LibreClinica rules provide edit check, email action and other capabilities during the course of data capture and in batch mode.<br><br> You may click on the action icons to view, test, execute and manage these rules. By default the table is filtered by Rule Status (Available) and sorted by Item Name. Use the column headers and filter fields (gray boxes) to sort and filter, or filter by Event CRF by using the tree in the 'Info' panel below
 
-marking_CRF_complete_finalize_DE = Marcar este CRF como completo ir\u00E0 finalizar a entrada de dados. Voc\u00EA n\u00E3o poder\u00E0 mais adicionar ou modificar os dados a menos que o CRF seja reinicializado por um administrador. Se for requerida entrada dupla de dados, voc\u00EA ou outro usu\u00E0rio pode precisar completar este novo CRF antes de ele ser verificado como completo. Voc\u00EA est\u00E0 certo que quer marc\u00E0-lo como completo?
+marking_CRF_complete_finalize_DE = Marcar este CRF como completo ir\u00E1 finalizar a entrada de dados. N\u00E3o poder\u00E1 adicionar ou modificar os dados a menos que o CRF seja acedido pelo administrador. Caso seja necess\u00E1ria uma nova entrada de dados poder\u00E1 ter que completar novamente o CRF antes de ser marcado como completo. De certeza que deseja marcar o CFR como completo?
 
 may_access_modules_and_perform = ,  voc\u00EA pode acessar os seguintes m\u00F3dulos e executar a\u00E7\u00F5es dispon\u00EDveis autorizadas para sua fun\u00E7\u00E3o no estudo.
 
@@ -422,7 +422,7 @@ of = de
 
 openclinica_enterprise_is_an_enhaced_version = <P>OpenClinica Enterprise \u00E9 uma vers\u00E3o aprimorada do OpenClinica, com padr\u00F5es estritos de qualidade, combinados com o suporte e servi\u00E7os do Akaza. Para saber mais sobre o suporte e servi\u00E7os do Akaza, voc\u00EA pode visitar <a href="http://www.openclinica.org/section.php?sid=4">OpenClinica.org</a>.
 
-openclinica_excel_support = OpenClinica is tested and supported with the use of Microsoft Excel 97-2003. If you are using a more recent version of Excel, please use the options to "save as 97-2003 version".
+openclinica_excel_support = LibreClinica is tested and supported with the use of Microsoft Excel 97-2003. If you are using a more recent version of Excel, please use the options to "save as 97-2003 version".
 
 
 
@@ -730,7 +730,7 @@ your_openclinica_password = sua senha do OpenClinica
 
 the_study_site_status_is = The study/site status is
 welcome_to = Bem-vindo ao
-notes_assigned_to_me = Notas e discrep\u00E2ncias atribu\u00EDdas a mim
+notes_assigned_to_me = Notas e discrep\u00E2ncias atribu\u00EDdas a mim: \t
 
 your_password_has_been_reset_as = Sua senha foi reinicializada como
 
@@ -742,7 +742,7 @@ html_helptext = Extracting to an HTML file for printing to hard copy
 pdf_output = Extract to PDF
 pdf_output_link = Click here for PDF output
 pdf_helptext = Extracting to a PDF file for printing to hard copy
-extract_instructions = You have just run an Extract Data job on the system.  You can feel free to work on other things while the job runs, and OpenClinica will alert you when the job is finished.
+extract_instructions = You have just run an Extract Data job on the system.  You can feel free to work on other things while the job runs, and LibreClinica will alert you when the job is finished.
 extract_is_running = Your extract is running. You will receive an email and message when the extract is complete.
 back_to_datasets = Back to View All Datasets
 back_to_dataset = Back to Dataset
