--- a/i18n/page_messages_en.properties
+++ b/i18n/page_messages_en.properties
@@ -64,11 +64,11 @@ VALIDATION_ERROR_MESSAGE_column = VALIDATION ERROR MESSAGE column
 VALIDATION_column = VALIDATION column
 
 X_was_created_succesfully = ' was created successfully.
-
+a_user_cannot_be_created_no_roles_as_role = A user cannot be created, because there are no roles to set as a role within the active study for the user.
 
 
 a_user_cannot_be_created_no_study_as_active = A user cannot be created because there is no Study to set as a current Study for the user.
-a_user_cannot_be_created_no_roles_as_role = A user cannot be created, because there are no roles to set as a role within the active study for the user.
+
 a_user_cannot_be_created_no_user_types_for = A user cannot be created because there are no user Types within the current Study for the user.
 
 access_end = '>here</a>.<br/>
@@ -99,7 +99,7 @@ br_create_new_CRF_uploading = <br>Create a new CRF version by uploading an Excel
 
 br_download_blank_CRF_spreadsheet_from = <br>Download a blank CRF Excel spreadsheet template <a href="DownloadVersionSpreadSheet?template=1"><b>here</b></a>.
 
-br_download_example_CRF_instructions_from = <br>Download example CRFs and instructions from the <a href="http://www.openclinica.org/entities/entity_details.php?eid=151"><b>OpenClinica.org portal</b></a> (OpenClinica.org user account required).
+br_download_example_CRF_instructions_from = <br>Download example CRFs from the <a href="https://medical-data-models.org" target="new"><b>Medical Data Models (MDM) Portal</b></a> (MDM-Portal user account required).
 
 br_if_you_owner_CRF_version = <br>If you are the owner of a CRF version, and the CRF version has not been used in a Study, you can overwrite the CRF version by uploading a new Excel spreadsheet with same version name. In this case, the system will ask you if you want to delete the previous contents and upload a new version.
 
@@ -157,13 +157,13 @@ dataset_has_been_succesfully_reinstated = The dataset has been successfully rein
 dataset_removed = The dataset has been successfully removed.
 
 default_value_not_allowed_for_calculation = Default_value is not allowed for 'calculation' or 'group-calculation' type in DEFAULT_VALUE column at
-
+did_not_match_crf_version = did not match the intended CRF version you want to upload.  Make sure this reads
 
 
 does_not_exist_in_group_spreadsheet = does not exist in the Groups tab. Add it to the Groups tab, or change it to a Group that exists.
 
 duplicate = A duplicate
-did_not_match_crf_version = did not match the intended CRF version you want to upload.  Make sure this reads
+
 email_body_1 = Study:
 
 email_body_10 = with your user name and password after selecting the link. If you receive a "page cannot be displayed" message, make sure to select the Change Study/Site link in the upper right table of the page, select the Study referenced above, and select the link again.
@@ -218,11 +218,11 @@ expected_total_enrollment_must_be_a_positive_number = Expected Total Enrollment 
 expression_invalid_at = The expression is invalid at
 
 expression_not_start_with_func_at = The expression does not start with 'func' at
-
+fields_for_event_all_required = The fields for event are all required. Please choose 'Add New Study Event' from Menu and try to add events again.
 
 
 file_uploading_failed_please_check_logs_and_upload_again = File uploading failed. Check the logs and upload again.
-fields_for_event_all_required = The fields for event are all required. Please choose 'Add New Study Event' from Menu and try to add events again.
+
 permitted_file_extensions = Permitted file extension(s) "{0}".
 
 prohibited_file_extensions = Prohibited file extension(s) "{0}".
@@ -305,7 +305,7 @@ however_was_error_sending_user_email_regarding = \ However, there has been an er
 
 html_email_body_1 = Your Job, set to run on the dataset '
 
-html_email_body_2 = ', has completed running. You can check the new files generated under the dataset's entry in OpenClinica's Extract Data Module, available <a href='
+html_email_body_2 = ', has completed running. You can check the new files generated under the dataset's entry in LibreClinica's Extract Data Module, available <a href='
 
 html_email_body_3 = '>here</a>.<br/>
 
@@ -313,7 +313,7 @@ html_email_body_4 = Your job created the file
 
 html_email_body_4_5 = , which is available at <a href='
 
-html_email_body_5 = If you have any questions about this job, or you have received this message in error, contact the administrator for your OpenClinica system.<br/><p>Thank you,<br/>The OpenClinica Development Team
+html_email_body_5 = If you have any questions about this job, or you have received this message in error, contact the administrator for your LibreClinica system.<br/><p>Thank you,<br/>The LibreClinica Development Team
 
 html_email_header_1 = <p>Dear
 
@@ -321,7 +321,7 @@ html_email_header_2 = ,<br/>
 
 if_you_do_not_want_change_leave_blank = If you do not want to change the password, you can leave the new password field blank.
 
-in_order_to_re_enter_openclinica = \ in order to re-enter OpenClinica.
+in_order_to_re_enter_openclinica = \ in order to re-enter LibreClinica.
 
 in_parent_study = in Parent Study
 
@@ -584,7 +584,7 @@ please_choose_a_user_to_set_role_for = Choose a user to set the Role for.
 please_choose_a_user_to_view = Choose a user to view.
 
 please_choose_an_ED_ta_to_vies_details = Choose an Event Definition tab to view details.
-please_select_the_link_below_dn = Please select the link below to view the information provided. You may need to login to OpenClinica with your user name and password after selecting the link. If you receive a page cannot be displayed message, please make sure to select the Change Study/Site link in the upper right table of the page, select the study referenced above, and select the link again.
+
 please_choose_an_event_CRF_to_delete = Choose an Event CRF to delete.
 
 please_choose_an_event_CRF_to_remove = Choose an Event CRF to remove.
@@ -681,9 +681,9 @@ should_select_one_item_to_create_dataset = Select at least one Item to create a 
 since_perform_data_entry = Since you performed the initial round of data entry on this Event CRF, and less than twelve hours have passed since the time data entry was completed, you cannot perform validation right now.
 
 sorry_but_at_this_time_may_not_modufy_SED = You cannot modify a Study Event Definition once data has been added to it. If you need to edit it, remove all Event data associated with this Study Event Definition first.
-study_module_description_2 = Once you have completed steps 1 - 5 and click the "Save" button, steps 6 and 7 will appear, allowing you to configure your study's Sites and add Users at the study or site levels.
-study_creation_cancelled = Your Study creation is cancelled.
 
+study_creation_cancelled = Your Study creation is cancelled.
+study_module_description_2 = Once you have completed steps 1 - 5 and click the "Save" button, steps 6 and 7 will appear, allowing you to configure your study's Sites and add Users at the study or site levels.
 study_event_to_enter_data_not_belong_study = The Study Event for which you are attempting to enter data does not belong to the current Study.
 
 study_event_updated = The Study Event was updated successfully.
@@ -692,7 +692,7 @@ study_locked_site_status_frozen = The parent Study is frozen; you cannot update 
 
 study_locked_site_status_locked = The parent Study is locked; you cannot update the status of the Site.
 
-study_module_description_1 = Welcome to the Build Study page of OpenClinica! This page is designed to help you build and configure your Study by following a task-based approach. The tasks listed below need to be completed in order to start using your Study. Once you have finished each task, check "Mark Complete" then click the "Save" button. <ul><li>To start a task, select the {0} icon. You can always select the {1} icon to add a new component to your Study.</li><li>Select the {2} icon to edit the values for a task.</li><li>Select the {3} to view the specified values for that task.</li></ul>
+study_module_description_1 = Welcome to the Build Study page of LibreClinica! This page is designed to help you build and configure your Study by following a task-based approach. The tasks listed below need to be completed in order to start using your Study. Once you have finished each task, check "Mark Complete" then click the "Save" button. <ul><li>To start a task, select the {0} icon. You can always select the {1} icon to add a new component to your Study.</li><li>Select the {2} icon to edit the values for a task.</li><li>Select the {3} to view the specified values for that task.</li></ul>
 
 
 
@@ -910,7 +910,7 @@ was_invalid_at_row = was invalid at row
 
 was_updated_succesfully = \ was updated successfully.
 
-welcome = Welcome to OpenClinica,
+welcome = Welcome to LibreClinica,
 
 width_decimal_unavailable_for_single_multi_checkbox_radio = width_decimal is unavailable for "single-select", "multi-select", "chechbox" and "radio"
 
@@ -968,7 +968,7 @@ your_crf_version_oid_for_study_event_oid = Your CRF Version OID {0} for Study Ev
 
 your_current_study_is_not_the_same_as = Your current Study is not the same as the Study {0}, for which you are trying to enter data. Change the current Study.
 
-your_email_address_not_found_try_again = Your email address could not be found in our database. Try again or contact the OpenClinica Administrator.
+your_email_address_not_found_try_again = Your email address could not be found in our database. Try again or contact the LibreClinica Administrator.
 
 your_expired_password_reset_successfully = Your expired password has been reset successfully.
 
@@ -986,13 +986,13 @@ your_password_has_expired_must_change = Your password has expired. You must chan
 
 your_password_not_send_due_mail_server_problem = Your password cannot be sent due to a mail server connection problem. Try again later.
 
-your_password_not_verified_try_again = Your Password Challenge answer could not be verified. Try again or contact the OpenClinica Administrator.
+your_password_not_verified_try_again = Your Password Challenge answer could not be verified. Try again or contact the LibreClinica Administrator.
 
 your_password_reset_new_password_emailed = Your password has been reset and a new, temporary password has been emailed to the address on file. You will be required to change this password the next time you log in to the system.
 
 your_request_has_been_sent_succesfully = Your request has been sent successfully.
 
-your_request_has_been_sent_succesfully_to_admin = Your request has been successfully sent to the OpenClinica Administrator.
+your_request_has_been_sent_succesfully_to_admin = Your request has been successfully sent to the LibreClinica Administrator.
 
 your_study_event_contains_no_form_data = Your Study Event {0} contains no Form Data, or the Form OIDs are incorrect. Check it and try again.
 
@@ -1022,6 +1022,7 @@ lockout_changes_have_been_saved = The changes you made to the Lockout Configurat
 job_ran_for = Job ran for
 job_ran_but_no_files = Job ran but no real files found.
 job_failure_for = Job FAILURE for
+please_select_the_link_below_dn = Please select the link below to view the information provided. You may need to login to OpenClinica with your user name and password after selecting the link. If you receive a page cannot be displayed message, please make sure to select the Change Study/Site link in the upper right table of the page, select the study referenced above, and select the link again.
 please_review_the_data_html = Review the data, or modify the files accordingly so that they can be imported.<br/>
 unreadable_file = Unreadable File
 problems_encountered_with_file = Problems encountered with file {0}: {1}<br/>
@@ -1035,7 +1036,6 @@ you_can_access_odm_12_xml = You can access your ODM 1.2 XML file <a href='Access
 you_can_access_odm_13 = You can access your ODM 1.3 XML file <a href='AccessFile?fileId={0}'>here</a>.<br/>
 you_can_access_odm_13_xml = You can access your ODM 1.3 w/OpenClinica Extension XML file <a href='AccessFile?fileId={0}'>here</a>.<br/>
 you_can_access_spss = You can access your SPSS files <a href='AccessFile?fileId={0}'>here</a>.<br/>
-
 SHOW_GROUP_column = SHOW_GROUP column
 SHOW_ITEM_column = SHOW_ITEM column
 write_protected = The file you are trying to remove is write protected. Contact the administrator.
@@ -1060,7 +1060,7 @@ item_header_length_error = Item header cannot be more than 2000 characters
 item_subheader_length_error = Item subheader cannot be more than 240 characters
 regexp_errror_length_error = Regexp error cannot be more than 255 characters
 group_label_length_error = Group Label cannot be more than 255 characters
-radio_with_default = OpenClinica does not support DEFAULT_VALUES with radio RESPONSE_TYPES. Change the RESPONSE_TYPE for this item
+radio_with_default = LibreClinica does not support DEFAULT_VALUES with radio RESPONSE_TYPES. Change the RESPONSE_TYPE for this item
 change_radio = , or remove the value in the DEFAULT_VALUE column.
 repeating_group_error = Repeating Group must be true/false.
 repeat_number_none_repeating = Repeat Number must be blank for non-repeating groups.
@@ -1074,7 +1074,7 @@ should_be_hide_for_scd = For a simple conditional display item, its ITEM_DISPLAY
 ITEM_DISPLAY_STATUS_column = ITEM_DISPLAY_STATUS column
 
 
-rules_Import_info = Rules are created in an XML document outside of OpenClinica and are imported through this module. <br> Rules allow users to build advanced edit checks, such as cross-field and cross-form edit checks and edit checks with dates. <br>When authoring Rules, actions can be specified for sending emails, or autogenerating Discrepancy Notes or both. <br>For more information about Rules and examples, see 'Rules' in OpenClinica User Documentation.
+rules_Import_info = Rules are created in an XML document outside of LibreClinica and are imported through this module. <br> Rules allow users to build advanced edit checks, such as cross-field and cross-form edit checks and edit checks with dates. <br>When authoring Rules, actions can be specified for sending emails, or autogenerating Discrepancy Notes or both. <br>For more information about Rules and examples, see 'Rules' in LibreClinica User Documentation.
 
 
 you_can_only_use_letters_or_numbers = \u0020You can only use letters or numbers in this field.
@@ -1143,7 +1143,7 @@ rules_Import_message1 = Congratulations! Your Rule import passed with no errors.
 rules_Import_message2 = Congratulations! Your Rule import passed with no errors. Some existing Rules or Rule assignments will be updated or replaced. Review the Rule validation results. You can save it to the database by clicking "Continue".
 rules_Import_message3 = Your Rule import had some errors. Review the Rule validation results.
 
-you_received_this_from = <P>You received this email from the OpenClinica system because you are listed as the assigned user for this Discrepancy Note. You will need to log in to OpenClinica with your user name and password after clicking the link. If after login you receive a "page cannot be displayed" message, make sure to select the Change Study/Site link, select the Study referenced above, and try the link again.</P>
+you_received_this_from = <P>You received this email from the LibreClinica system because you are listed as the assigned user for this Discrepancy Note. You will need to log in to LibreClinica with your user name and password after clicking the link. If after login you receive a "page cannot be displayed" message, make sure to select the Change Study/Site link, select the Study referenced above, and try the link again.</P>
 
 disc_note_info = <P>Discrepancy Note Information:</P>
 
@@ -1178,7 +1178,7 @@ two_items_should_be_valid_pair = two Items should be a valid pair
 error_message_cannot_update_crf_version = Cannot update CRF version for the Subject.
 
 
-nested_parent_id = Nested Parent items are not supported by OpenClinica (row\u0020
+nested_parent_id = Nested Parent items are not supported by LibreClinica (row\u0020
 nested_parent_id_1 = ). Please change the value.
 parent_id = The Parent item specified on row\u0020
 parent_id_1 = \u0020does not exist. Please update the value.
@@ -1187,7 +1187,7 @@ items_worksheet_with_dot = Items sheet.\u0020
 group_in_several_sections = Items of one repeating group spread over several sections. Check items in Group '
 default_value_wrong_select = Only one default value is allowed for 'single-select' type in DEFAULT_VALUE column at\u0020
 default_value_wrong_select_1 = Default_value is not part of response options set at row\u0020
-default_value_not_allowed = OpenClinica does not support DEFAULT_VALUES with 'calculation', 'group-calculation', 'instant-calculation' and 'file' RESPONSE_TYPES. Change the RESPONSE_TYPE for this item \u0020
+default_value_not_allowed = LibreClinica does not support DEFAULT_VALUES with 'calculation', 'group-calculation', 'instant-calculation' and 'file' RESPONSE_TYPES. Change the RESPONSE_TYPE for this item \u0020
 PHI_column = PHI column value\u0020
 units_length_error = UNITS field text cannot be more than 64 characters
 
