--- a/i18n/terms_en.properties
+++ b/i18n/terms_en.properties
@@ -42,7 +42,7 @@ Invalid = invalid
 
 Invalid_Type = Invalid Type
 
-Investigator = \u0020
+Investigator = Data Specialist
 
 MSK = MSK
 
@@ -200,7 +200,7 @@ integer = integer
 
 invalid = invalid
 
-investigator = investigator
+investigator = data entry
 
 less_than = less than
 
@@ -210,7 +210,7 @@ locked = locked
 
 masked = masked
 
-monitor = monitor
+monitor = Monitor
 
 multi-select = multi-select
 
@@ -292,7 +292,7 @@ site_Study_Coordinator = Data Manager
 
 site_Study_Director = Study Director
 
-site_investigator = Investigator
+site_investigator = Data entry
 
 site_monitor = Monitor
 
@@ -353,7 +353,7 @@ rule_import_cross_field_email = Cross-field edit check (with email action)
 rule_import_cross_field_dn = Cross form edit check (with DN action)
 rule_import_all_actions_with_notes = All actions (with comments)
 rule_import_all_actions_without_notes = All actions (without comments)
-rule_import_download_rules_xsd = Download OpenClinica rules.xsd
+rule_import_download_rules_xsd = Download LibreClinica rules.xsd
 rule_import_generic = All actions (without comments)
 
 Query_and_Failed_Validation_Check = Query and Failed Validation Check
@@ -388,4 +388,4 @@ Study = Study
 CRF = CRF
 Batch_CRF_version_migration_has_finished_running = Batch CRF version migration has finished running.
 Batch_Migration_Complete_For = Batch Migration Complete For
-Thank_you_Your_OpenClinica_System = Thank you, Your OpenClinica System
+Thank_you_Your_OpenClinica_System = Thank you, Your LibreClinica System
