--- a/i18n/terms_pt.properties
+++ b/i18n/terms_pt.properties
@@ -42,7 +42,7 @@ Invalid = Inv\u00e1lido
 
 Invalid_Type = Tipo Inv\u00e1lido
 
-Investigator = \u0020
+Investigator = Data Specialist
 
 MSK = MSK
 
@@ -210,7 +210,7 @@ locked = bloqueado
 
 masked = mascarado
 
-monitor = monitor
+monitor = Monitor
 
 multi-select = multi-select
 
@@ -281,7 +281,7 @@ scheduled = agendado
 
 set = set
 
-signed = signed
+signed = assinado
 
 single_select = single-select
 
@@ -292,7 +292,7 @@ site_Study_Coordinator = Data Manager
 
 site_Study_Director = Study Director
 
-site_investigator = Investigator
+site_investigator = Investigador
 
 site_monitor = Monitor
 
@@ -353,7 +353,7 @@ rule_import_cross_field_email = Cross-field edit check (with email action)
 rule_import_cross_field_dn = Cross form edit check (with DN action)
 rule_import_all_actions_with_notes = All actions (with comments)
 rule_import_all_actions_without_notes = All actions (without comments)
-rule_import_download_rules_xsd = Download OpenClinica rules.xsd
+rule_import_download_rules_xsd = Download LibreClinica rules.xsd
 rule_import_generic = All actions (without comments)
 
 Query_and_Failed_Validation_Check = Query and Failed Validation Check
@@ -388,4 +388,4 @@ Study = Study
 CRF = CRF
 Batch_CRF_version_migration_has_finished_running = Batch CRF version migration has finished running.
 Batch_Migration_Complete_For = Batch Migration Complete For
-Thank_you_Your_OpenClinica_System = Thank you, Your OpenClinica System
+Thank_you_Your_OpenClinica_System = Thank you, Your LibreClinica System
