--- a/i18n/words_en.properties
+++ b/i18n/words_en.properties
@@ -125,7 +125,7 @@ OTH = OTH
 
 October = October
 
-OpenClinica = OpenClinica
+OpenClinica = LibreClinica
 
 Openclinica_Release_1_1 = Openclinica Release 1.1, Akaza Research 2002-2004.<br>Optimized for Internet Explorer 5.5 and above.<br>
 
@@ -146,7 +146,7 @@ Role_of_Access_Requested_Pending_Approval = Role of Access Requested: (Pending A
 SDV_complete = SDV Complete
 
 SDV_requirement = SDV Requirement
-
+Version_release = Version: 3.1.4.1-Community
 SDV_status = SDV Status
 
 SE = Study Event
@@ -170,7 +170,7 @@ UNK = UNK
 URL_description = URL Description:
 
 URL_reference = URL Reference
-Version_release = Version: 3.1.4.1-Community
+
 YOB = YOB: YYYY
 
 Years = Years
@@ -227,7 +227,7 @@ added_filter = Added Filter
 administer_studies = Administer Studies
 
 administer_study = Administer Study
-
+all_data_associated_with_the_CRF_in_this_event = All data associated with the CRF in this Event will be removed.
 administer_subjects = Administer Subjects
 
 administer_users = Administer Users
@@ -250,9 +250,9 @@ alerts_messages = Alerts & Messages
 
 all = All
 
-all_data_associated_with_the_CRF_in_this_event = All data associated with the CRF in this Event will be removed.
 all_data_associated_with_the_CRF_in_this_event_will_be_removed = Data in removed Event CRFs are retained and viewable on the form, but not included in any extracted data sets. The removed Event CRF can be restored at any time. All Notes & Discrepancies associated with this Event CRF will be automatically closed.
 all_data_associated_with_the_CRF_in_this_event_will_be_restored = All data associated with the CRF in this Event will be restored.
+
 all_events = All Events
 
 all_fields_are_required = All fields are required.
@@ -383,7 +383,7 @@ cdisc_odm = CDISC ODM 1.2
 
 change_password = Change Password
 
-change_study = Change Study
+change_study = Change
 
 change_user_profile = Change User Profile
 
@@ -469,7 +469,7 @@ confirm_and_submit_study = Confirm & Submit<br>Study
 
 confirm_changes = Confirm Changes
 
-confirm_changing_study = Confirm Changing Study
+confirm_changing_study = Confirm
 
 confirm_dataset_properties = Confirm Dataset Properties
 
@@ -906,7 +906,7 @@ equal_to = equal to
 
 error_encountered = Error Encountered
 
-error_page = <P>This can be for a number of reasons, which may or may not have to do with the OpenClinica application.  If there are any system messages above this text, please copy and paste them into the<a href="https://issuetracker.openclinica.com/bug_report_page.php"> Report Issue Form</a>. <P>If there are no other messages, you might try clicking on the links in the navigation, and see what happens.  This might  reinitialize your connection with the database. Or <a href="{0}">click here</a> to go back to where you came from. <P>If you can't get back to a working page, please let us know!  Please be sure to include <ul> <li>what you were doing, <li>when it happened, <li>and any other details (like error messages) that might be important. </ul> <P>Thank you! <P>The OpenClinica Development Team
+error_page = <P>This can be for a number of reasons, which may or may not have to do with the LibreClinica application. If there are any system messages above this text, you may want to report them to your Administrator. <P>If there are no other messages, you might try clicking on the links in the navigation, and see what happens. This might reinitialize your connection with the database. Or <a href="{0}">click here</a> to go back to where you came from. <P>Thank you! <P>The LibreClinica Development Team
 
 estimated_completion_date = Estimated Completion Date
 
@@ -1056,17 +1056,17 @@ go_back_to_CRF_list = Go Back to CRF List
 go_back_to_definition_list = Go Back to Definition List
 
 go_back_to_site_list = Go Back to Site List
-footer.edition.1 = Unsupported
+
 go_back_to_study_list = Go Back to Study List
-footer.edition.2 = OpenClinica Community
+
 go_back_to_study_subject_list = Go Back to Study Subject List.
-footer.license.1 = &copy; 2004-2013 OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a>
+
 go_back_to_subject_list = Go Back to Subject List
-footer.license.2 = is provided AS IS, without warranty. Licensed under LGPLv2.1, you can redistribute it and/or modify it under the terms of the
-footer.license.3 = <a target="_blank" href="http://www.openclinica.com/gnu-lgpl-open-source-license">GNU Lesser General Public License</a> version 2.1 as published by the Free Software Foundation. OpenClinica is a <a target="_blank" href="http://www.openclinica.com/trademark">trademark</a> of OpenClinica, LLC.
+
 go_back_to_user_list = Go Back to User List
-footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM) are trademarks of OpenClinica LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of OpenClinica LLC, and is not certified, approved,<br/>or sponsored by OpenClinica LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other OpenClinica products.
+
 go_back_to_view_subject = Go Back to View Subject
+
 greater_than = greater than
 
 greater_than_or_equal = greater than or equal
@@ -1087,7 +1087,7 @@ groups = Groups
 
 hard_validation_error_checks = Hard Validation Error Checks
 
-have_logged_out_application = You have logged out of the application. Please go to the <a href="MainMenu">Login Page</a> in order to re-enter OpenClinica.
+have_logged_out_application = You have logged out of the application. Please go to the <a href="MainMenu">Login Page</a> in order to re-enter LibreClinica.
 
 header = Header
 
@@ -1193,7 +1193,7 @@ item_metadata = Item Metadata
 
 item_name = Item Name
 
-item_names_are_shared_across_different_versions = Item Names are <b>shared</b> across different versions of a CRF in OpenClinica system. The CRF version upload process automatically detects Item Names that are new to this CRF and haven't been included in previous versions of this CRF.</p> <p>If any new Item Names were detected in the spreadsheet, they are listed below. If an exsiting item's properties will be changed, it is listed below  as well. Names in the list below will be added or changed in the database if you decide to continue.</p> <p>If there are no new Item Names or changes, which means all the Items Names in this CRF Version already exist for this CRF, the list below will be empty. <br><br><b>If you have made a mistake, <a href="ListCRF">please go back to the CRF List</a> and upload your spreadsheet again.</b></p>
+item_names_are_shared_across_different_versions = Item Names are <b>shared</b> across different versions of a CRF in LibreClinica system. The CRF version upload process automatically detects Item Names that are new to this CRF and haven't been included in previous versions of this CRF.</p> <p>If any new Item Names were detected in the spreadsheet, they are listed below. If an exsiting item's properties will be changed, it is listed below  as well. Names in the list below will be added or changed in the database if you decide to continue.</p> <p>If there are no new Item Names or changes, which means all the Items Names in this CRF Version already exist for this CRF, the list below will be empty. <br><br><b>If you have made a mistake, <a href="ListCRF">please go back to the CRF List</a> and upload your spreadsheet again.</b></p>
 
 
 items_pending_validation = Items Pending Validation
@@ -1418,7 +1418,7 @@ one_name_per_line = one name per line
 
 only_year_of_birth = Only Year of Birth
 
-openclinica = OpenClinica
+openclinica = LibreClinica
 
 openclinica_enterprise = OpenClinica Enterprise
 
@@ -1426,15 +1426,15 @@ openclinica_feedback = Support
 
 openclinica_home = Openclinica Home
 
-openclinica_portal = OpenClinica Website
+openclinica_portal = cosi website
 
-openclinica_print_study_events = OpenClinica-Print Study Events
+openclinica_print_study_events = LibreClinica-Print Study Events
 
 openclinica_report_issue = Report Issue
 
-openclinica_study_subject_ID = OpenClinica Study Subject ID
+openclinica_study_subject_ID = LibreClinica Study Subject ID
 
-openclinica_subject_id = OpenClinica Subject ID
+openclinica_subject_id = LibreClinica Subject ID
 
 operator = Operator
 
@@ -1529,7 +1529,7 @@ print_all_available_crf = Print All Available CRFs
 
 print_default = Print Default
 
-print_discrepancy_notes = OpenClinica-Print Discrepancy Notes
+print_discrepancy_notes = LibreClinica-Print Discrepancy Notes
 
 print_entire_CRF = Print Entire CRF
 
@@ -2065,7 +2065,7 @@ task = Task
 technical_administrator = Technical Administrator
 
 template = template
-
+this_crf_has_data = This CRF has data. Are you sure you want to remove it?
 test_rule = Rule
 
 test_rule_default_result = Please provide a target and a rule and then press Submit
@@ -2115,7 +2115,7 @@ there_are_no_CRF = There are no CRFs in this study event.
 there_are_no_sections = There are no sections in this Event CRF.
 
 there_are_not_sections_in_this_CRF = There are no sections in this CRF Version.
-this_crf_has_data = This CRF has data. Are you sure you want to remove it?
+
 this_CRF_has_data_want_delete = This CRF has data. Are you sure you want to delete it? All Notes & Discrepancies associated with this Event CRF will be automatically closed. The Event CRF status will revert to Data Entry Started.
 this_crf_has_data_remove = This CRF has data. Are you sure you want to remove it? All Notes & Discrepancies associated with this Event CRF will be automatically closed. The Event CRF status will be set to Removed/Invalid.
 this_crf_has_data_restore = This CRF has data. Are you sure you want to restore it?
@@ -2252,7 +2252,7 @@ version_already_exits = Version Already Exists
 
 version_name = Version Name
 
-version_number = 3.14
+version_number = 1.1.0
 
 version_oid = Version_OID
 
@@ -2402,7 +2402,7 @@ you_have_unsaved_data2 = You have unsaved data. Are you sure you want to go to a
 
 you_have_unsaved_data_exit = You have unsaved data. Are you sure you want to exit without saving?
 
-you_must_be_an_openClinica_member_to_receive_a_password = You must have a valid OpenClinica user account to receive a password. Please fill out all the fields in the following form. OpenClinica will use the e-mail address associated with your account to send you the password. If you still have questions, please contact your OpenClinica Administrator for help.
+you_must_be_an_openClinica_member_to_receive_a_password = You must have a valid LibreClinica user account to receive a password. Please fill out all the fields in the following form. LibreClinica will use the e-mail address associated with your account to send you the password. If you still have questions, please contact your LibreClinica Administrator for help.
 
 you_will_overwrite_event_CRFs_continue = You will overwrite event CRFs that have already been saved in the database.  Do you want to continue?
 
@@ -2437,7 +2437,7 @@ password_required = Password Required
 download_discrepancy_notes = Download discrepancy notes for all events (filtered for status or type)
 Filter_by_note_type = Filter by note type
 Filter_by_status = Filter by status
-openclinica_CRF_catalog = OpenClinica CRF Library
+openclinica_CRF_catalog = LibreClinica CRF Library
 download_all_discrepancy_notes = Download discrepancy notes for all subjects
 submit_notes = Submit Discrepancy Notes
 crf_oid = CRF_OID
@@ -2788,7 +2788,7 @@ rule_go_back_to_Manage_rules = Go Back to Manage Rules
 rule_if_you_remove_this_all = You are removing all rules currently associated with this item. The rules can be restored later by a Data Manager or Study Director. Are you sure you want to do this?
 rule_target_oid = Target OID
 rule_variables = Specify Variables
-browser_locale = OpenClinica is currently being displayed in the\t
+browser_locale = LibreClinica is currently being displayed in the\t
 
 select_all_items_in_study = Select All Items in Study
 
@@ -2799,19 +2799,19 @@ assign_study_user_note = Note\: If you wish to assign users to a site you must f
 that_study = logged into that study.
 
 that_site = logged into that site.
-
+footer.license.1 = &copy; 2004-2013 OpenClinica, LLC and collaborators. The OpenClinica <a target="_blank" href="http://www.openclinica.com">software for clinical research</a>
 view_within_crf = View within record
-
+footer.license.2 = is provided AS IS, without warranty. Licensed under LGPLv2.1, you can redistribute it and/or modify it under the terms of the
 rule_designer = Rule Designer
-
+footer.license.3 = <a target="_blank" href="http://www.openclinica.com/gnu-lgpl-open-source-license">GNU Lesser General Public License</a> version 2.1 as published by the Free Software Foundation. OpenClinica is a <a target="_blank" href="http://www.openclinica.com/trademark">trademark</a> of OpenClinica, LLC.
 language = language.
+footer.edition.1 = Unsupported
 
-
+footer.edition.2 = OpenClinica Community
 scheduled_export_data_jobs = Scheduled Export Data Jobs
-
+footer.tooltip = OpenClinica(R), OpenClinica Enterprise(TM) are trademarks of OpenClinica LLC.<br/><br/> The party providing this instance of OpenClinica is not a certified partner,<br/> reseller, or affiliate of OpenClinica LLC, and is not certified, approved,<br/>or sponsored by OpenClinica LLC in connection with installation, operation,<br/> maintenance or support of the OpenClinica software platform,<br/> the OpenClinica Enterprise software platform or any other OpenClinica products.
 view_currently_executing_data_export_jobs = View Currently Executing Data Export Jobs
 currently_executing_data_export_jobs = Currently Executing Data Export Jobs
-
 run_on_colon = Run On:
 IDE_comma = InitialDataEntry,
 DDE_comma = DoubleDataEntry,
@@ -2836,7 +2836,7 @@ reassign_crf_version = Reassign CRF to a New Version
 
 
 404_error_msg_header = 404: Page not found
-404_error_msg_body = <P>Sorry, but the page you are looking for has not been found. Please use the menu options in the navigation bar above to navigate to where you want to go. If you continue to get this error, please click the 'Report Issue' in the navigation bar above and let us know how you are getting to this page.<P>Thank you! <P>The OpenClinica Development Team
+404_error_msg_body = <P>Sorry, but the page you are looking for has not been found. Please use the menu options in the navigation bar above to navigate to where you want to go. If you continue to get this error, please click the 'Report Issue' in the navigation bar above and let us know how you are getting to this page.<P>Thank you! <P>The LibreClinica Development Team
 
 choose_CRF_version = Reassign CRF to a New Version
 
@@ -2910,7 +2910,7 @@ login.requestPassword.retrieveLdapPassword = LDAP users, recover your password h
 
 
 403_error_msg_header = 403: Permission Denied
-403_error_msg_body = <P>Sorry, but you do not have access to the page you are looking for, please contact your administrator for the access .<P>Thank you! <P>The OpenClinica Development Team
+403_error_msg_body = <P>Sorry, but you do not have access to the page you are looking for, please contact your administrator for the access .<P>Thank you! <P>The LibreClinica Development Team
 
 
 time_and_events = Time and Events
