--- a/i18n/workflow_ru.properties
+++ b/i18n/workflow_ru.properties
@@ -5,7 +5,7 @@ Specify_criteria = \u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043A\u0440\u0438
 
 add_new_study_event = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u043E\u0435 \u0441\u043E\u0431\u044B\u0442\u0438\u0435
 
-add_new_subject = \u002A
+add_new_subject = \u0020
 
 add_subject = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u0430\u0446\u0438\u0435\u043D\u0442\u0430
 
